--- a/.qoder/repowiki/zh/content/P2关系层.md
+++ b/.qoder/repowiki/zh/content/P2关系层.md
@@ -3,6 +3,7 @@
 <cite>
 **本文档中引用的文件**
 - [p2_relationship_layer.py](file://open_notebook/skills/living/p2_relationship_layer.py)
+- [p2_agents.py](file://open_notebook/open_notebook/skills/p2_agents.py)
 - [api_endpoints.py](file://open_notebook/skills/living/api_endpoints.py)
 - [api_main.py](file://open_notebook/skills/living/api_main.py)
 - [api_server.py](file://open_notebook/skills/living/api_server.py)
@@ -10,7 +11,16 @@
 - [skill_cell.py](file://open_notebook/skills/living/skill_cell.py)
 - [__init__.py](file://open_notebook/skills/living/__init__.py)
 - [test_p0_p2_integration.py](file://open_notebook/skills/living/tests/test_p0_p2_integration.py)
+- [feedback_loop.py](file://open_notebook/skills/feedback_loop.py)
 </cite>
+
+## 更新摘要
+**变更内容**
+- 新增P2代理系统（四象限关系构建代理）的详细说明
+- 增加社交网络分析和关系维护功能的描述
+- 更新架构图以反映双重P2系统结构
+- 添加反馈循环系统与P2代理的集成说明
+- 完善API端点和数据结构的说明
 
 ## 目录
 1. [简介](#简介)
@@ -25,7 +35,23 @@
 
 ## 简介
 
-P2关系层是活体知识系统的第五层架构，负责构建和维护知识图谱，发现知识节点之间的复杂关系。该层采用生物启发式设计，模拟生物体中组织器官的功能，通过四个专门的关系技能来实现全面的知识关系分析。
+P2关系层是活体知识系统的第五层架构，负责构建和维护知识图谱以及社交网络关系。该层采用双重架构设计，既包含传统的知识图谱构建能力，也包含基于四象限的社交关系代理系统。
+
+### 传统P2关系层（知识图谱构建）
+
+该系统专注于：
+- **实体链接**：提取和链接知识实体
+- **语义聚类**：基于语义相似度聚类知识
+- **时序编织**：发现时间关系
+- **交叉引用**：构建引用网络
+
+### P2代理系统（社交关系构建）
+
+该系统专注于：
+- **Q1P2信任构建器**：通过解决方案交付建立信任
+- **Q2P2社区绑定器**：强化情感社区纽带
+- **Q3P2病毒引擎**：优化内容病毒传播
+- **Q4P2影响力网络**：通过关键连接扩大影响力
 
 该系统的核心理念是将知识视为活体有机体，其中：
 - **技能细胞 (Skill Cells)**：基本功能单元
@@ -36,46 +62,70 @@ P2关系层是活体知识系统的第五层架构，负责构建和维护知识
 
 ## 项目结构
 
-P2关系层位于活体知识系统的核心位置，采用模块化设计：
+P2关系层位于活体知识系统的核心位置，采用模块化设计，包含双重架构：
 
 ```mermaid
 graph TB
-subgraph "P2关系层模块"
+subgraph "P2知识图谱层"
 P2Layer[P2关系层核心]
-Skills[四个关系技能]
-API[API端点]
-Storage[知识图谱存储]
+EntityLinker[实体链接器]
+SemanticCluster[语义聚类器]
+TemporalWeaver[时序编织器]
+CrossReference[交叉引用映射器]
+KnowledgeGraph[知识图谱存储]
+end
+subgraph "P2代理系统层"
+Q1P2[Q1P2信任构建器]
+Q2P2[Q2P2社区绑定器]
+Q3P2[Q3P2病毒引擎]
+Q4P2[Q4P2影响力网络]
+RelationshipPlan[关系计划]
+RelationshipReport[关系报告]
+FeedbackLoop[反馈循环]
 end
 subgraph "底层基础设施"
 AgentTissue[AgentTissue基类]
 LivingSkill[LivingSkill基类]
 Meridian[经络系统]
 Trigger[触发器系统]
+SharedMemory[共享内存]
 end
 subgraph "上层应用"
 Frontend[前端界面]
 API[REST API]
 Database[数据库]
+LearningEngine[学习引擎]
 end
-P2Layer --> Skills
-Skills --> AgentTissue
-AgentTissue --> LivingSkill
-P2Layer --> API
-API --> Frontend
-API --> Database
-P2Layer --> Storage
-Storage --> Database
-AgentTissue --> Meridian
-AgentTissue --> Trigger
+P2Layer --> EntityLinker
+P2Layer --> SemanticCluster
+P2Layer --> TemporalWeaver
+P2Layer --> CrossReference
+Q1P2 --> RelationshipPlan
+Q2P2 --> RelationshipPlan
+Q3P2 --> RelationshipPlan
+Q4P2 --> RelationshipPlan
+Q1P2 --> FeedbackLoop
+Q2P2 --> FeedbackLoop
+Q3P2 --> FeedbackLoop
+Q4P2 --> FeedbackLoop
+FeedbackLoop --> LearningEngine
+P2Layer --> KnowledgeGraph
+KnowledgeGraph --> Database
+Q1P2 --> SharedMemory
+Q2P2 --> SharedMemory
+Q3P2 --> SharedMemory
+Q4P2 --> SharedMemory
 ```
 
 **图表来源**
-- [p2_relationship_layer.py](file://open_notebook/skills/living/p2_relationship_layer.py#L1-L924)
-- [agent_tissue.py](file://open_notebook/skills/living/agent_tissue.py#L1-L489)
-- [skill_cell.py](file://open_notebook/skills/living/skill_cell.py#L1-L474)
+- [p2_relationship_layer.py](file://open_notebook/skills/living/p2_relationship_layer.py#L628-L821)
+- [p2_agents.py](file://open_notebook/open_notebook/skills/p2_agents.py#L113-L916)
+- [agent_tissue.py](file://open_notebook/skills/living/agent_tissue.py#L127-L200)
+- [feedback_loop.py](file://open_notebook/skills/feedback_loop.py#L1-L200)
 
 **章节来源**
 - [p2_relationship_layer.py](file://open_notebook/skills/living/p2_relationship_layer.py#L1-L924)
+- [p2_agents.py](file://open_notebook/open_notebook/skills/p2_agents.py#L1-L916)
 - [api_endpoints.py](file://open_notebook/skills/living/api_endpoints.py#L1-L566)
 
 ## 核心组件
@@ -134,8 +184,18 @@ P2关系层包含四个专门的关系技能，每个技能都有特定的功能
 3. **时序编织器 (Temporal Weaver)**：发现时间关系
 4. **交叉引用映射器 (Cross-Reference Mapper)**：构建引用网络
 
+### P2代理系统
+
+P2代理系统包含四个四象限代理，每个代理专注于特定的社交关系构建：
+
+1. **Q1P2信任构建器**：通过解决方案交付建立信任
+2. **Q2P2社区绑定器**：强化情感社区纽带
+3. **Q3P2病毒引擎**：优化内容病毒传播
+4. **Q4P2影响力网络**：通过关键连接扩大影响力
+
 **章节来源**
 - [p2_relationship_layer.py](file://open_notebook/skills/living/p2_relationship_layer.py#L85-L924)
+- [p2_agents.py](file://open_notebook/open_notebook/skills/p2_agents.py#L113-L916)
 
 ## 架构概览
 
@@ -155,6 +215,10 @@ subgraph "P2 关系层"
 P2Analysis[关系分析]
 P2Graph[知识图谱构建]
 P2Insights[关系洞察]
+P2Trust[信任建立]
+P2Community[社区绑定]
+P2Viral[病毒传播]
+P2Influence[影响力扩展]
 end
 subgraph "P3 进化层"
 P3Optimization[策略优化]
@@ -170,7 +234,14 @@ P1Assessment --> P1Priority
 P1Priority --> P2Analysis
 P2Analysis --> P2Graph
 P2Graph --> P2Insights
-P2Insights --> P3Optimization
+P2Insights --> P2Trust
+P2Insights --> P2Community
+P2Insights --> P2Viral
+P2Insights --> P2Influence
+P2Trust --> P3Optimization
+P2Community --> P3Optimization
+P2Viral --> P3Optimization
+P2Influence --> P3Optimization
 P3Optimization --> P3Learning
 P3Learning --> P4Storage
 P4Storage --> P4Management
@@ -332,8 +403,162 @@ RelationshipAnalysis --> KnowledgeNode : "引用"
 **图表来源**
 - [p2_relationship_layer.py](file://open_notebook/skills/living/p2_relationship_layer.py#L37-L83)
 
+### P2代理系统数据结构
+
+P2代理系统使用专门的数据结构来管理关系计划和报告：
+
+```mermaid
+classDiagram
+class RelationshipPlan {
++plan_id : str
++target_segment : str
++current_trust_level : TrustLevel
++target_trust_level : TrustLevel
++actions : List[Dict]
++timeline_days : int
++success_metrics : Dict
++created_at : datetime
++to_dict() Dict
+}
+class RelationshipReport {
++agent_name : str
++quadrant : str
++layer : str
++generated_at : datetime
++plans_created : List[RelationshipPlan]
++actions_executed : List[Dict]
++trust_metrics : Dict
++insights : List[str]
++recommendations_for_p3 : List[Dict]
++to_dict() Dict
+}
+class TrustLevel {
+<<enumeration>>
++AWARENESS
++INTEREST
++EVALUATION
++TRUST
++LOYALTY
++ADVOCACY
+}
+class RelationshipAction {
+<<enumeration>>
++BUILD_TRUST
++ENGAGE_COMMUNITY
++AMPLIFY_CONTENT
++EXPAND_NETWORK
++NURTURE_LEAD
+}
+RelationshipReport --> RelationshipPlan : "包含"
+RelationshipPlan --> TrustLevel : "使用"
+```
+
+**图表来源**
+- [p2_agents.py](file://open_notebook/open_notebook/skills/p2_agents.py#L37-L106)
+
+### Q1P2信任构建器
+
+Q1P2信任构建器专注于通过解决方案交付建立信任：
+
+```mermaid
+flowchart TD
+Start([开始信任构建]) --> FetchAssessments[获取Q1P1评估]
+FetchAssessments --> FilterPriority[过滤最低优先级]
+FilterPriority --> DesignSequence[设计信任序列]
+DesignSequence --> CreatePlan[创建关系计划]
+CreatePlan --> StorePlan[存储到共享内存]
+StorePlan --> GenerateReport[生成报告]
+GenerateReport --> CollectFeedback[收集反馈]
+CollectFeedback --> End([结束])
+```
+
+**图表来源**
+- [p2_agents.py](file://open_notebook/open_notebook/skills/p2_agents.py#L280-L375)
+
+信任构建序列包括：
+- **快速胜利**：立即提供价值，建立可信度
+- **证明内容**：案例研究、客户见证
+- **教育内容**：深度专业知识展示
+- **软性报价**：解决方案呈现
+
+### Q2P2社区绑定器
+
+Q2P2社区绑定器专注于强化情感社区纽带：
+
+```mermaid
+flowchart TD
+Start([开始社区绑定]) --> FetchEmotional[获取Q2P1情感评估]
+FetchEmotional --> FilterResonance[过滤共振度]
+FilterResonance --> DesignStrategy[设计社区策略]
+DesignStrategy --> CreatePlan[创建关系计划]
+CreatePlan --> StorePlan[存储到共享内存]
+StorePlan --> GenerateReport[生成报告]
+GenerateReport --> CollectFeedback[收集反馈]
+CollectFeedback --> End([结束])
+```
+
+**图表来源**
+- [p2_agents.py](file://open_notebook/open_notebook/skills/p2_agents.py#L495-L565)
+
+社区绑定策略包括：
+- **共同体验内容**：创造"你并不孤单"的内容
+- **讨论促进**：社区对话和互动
+- **认可项目**：庆祝和表彰成员
+- **同伴支持**：成员间的互助结构
+
+### Q3P2病毒引擎
+
+Q3P2病毒引擎专注于优化内容病毒传播：
+
+```mermaid
+flowchart TD
+Start([开始病毒优化]) --> FetchTrends[获取Q3P1趋势评估]
+FetchTrends --> FilterTrendScore[过滤趋势分数]
+FilterTrendScore --> DesignStrategy[设计病毒策略]
+DesignStrategy --> CreatePlan[创建关系计划]
+CreatePlan --> StorePlan[存储到共享内存]
+StorePlan --> GenerateReport[生成报告]
+GenerateReport --> CollectFeedback[收集反馈]
+CollectFeedback --> End([结束])
+```
+
+**图表来源**
+- [p2_agents.py](file://open_notebook/open_notebook/skills/p2_agents.py#L671-L737)
+
+病毒优化策略包括：
+- **钩子设计**：模式中断、好奇心缺口
+- **分享性工程**：社交货币、实用价值
+- **分发时机**：最佳发布时间窗口
+- **跨平台适配**：格式优化
+
+### Q4P2影响力网络
+
+Q4P2影响力网络专注于通过关键连接扩大影响力：
+
+```mermaid
+flowchart TD
+Start([开始影响力扩展]) --> FetchScenarios[获取Q4P1场景评估]
+FetchScenarios --> FilterConversion[过滤转换分数]
+FilterConversion --> DesignStrategy[设计影响力策略]
+DesignStrategy --> CreatePlan[创建关系计划]
+CreatePlan --> StorePlan[存储到共享内存]
+StorePlan --> GenerateReport[生成报告]
+GenerateReport --> CollectFeedback[收集反馈]
+CollectFeedback --> End([结束])
+```
+
+**图表来源**
+- [p2_agents.py](file://open_notebook/open_notebook/skills/p2_agents.py#L837-L903)
+
+影响力扩展策略包括：
+- **关键人物识别**：影响者、连接者
+- **合作机会**：客座出现、共同创作
+- **合作伙伴关系**：战略合作联盟
+- **推荐计划**：激励分享机制
+
 **章节来源**
 - [p2_relationship_layer.py](file://open_notebook/skills/living/p2_relationship_layer.py#L37-L83)
+- [p2_agents.py](file://open_notebook/open_notebook/skills/p2_agents.py#L37-L106)
 
 ## 依赖关系分析
 
@@ -343,8 +568,11 @@ P2关系层的依赖关系体现了活体知识系统的模块化设计：
 graph TB
 subgraph "核心依赖"
 P2Layer[p2_relationship_layer.py]
+P2Agents[p2_agents.py]
 AgentTissue[agent_tissue.py]
 LivingSkill[skill_cell.py]
+FeedbackLoop[feedback_loop.py]
+SharedMemory[SharedMemory]
 end
 subgraph "API层"
 APIEndpoints[api_endpoints.py]
@@ -359,16 +587,22 @@ Init[__init__.py]
 end
 P2Layer --> AgentTissue
 P2Layer --> LivingSkill
+P2Agents --> SharedMemory
+P2Agents --> FeedbackLoop
 APIEndpoints --> P2Layer
+APIEndpoints --> P2Agents
 APIMain --> APIEndpoints
 APIServer --> LivingSkill
 TestIntegration --> P2Layer
+TestIntegration --> P2Agents
 Init --> AgentTissue
 Init --> LivingSkill
+Init --> P2Agents
 ```
 
 **图表来源**
 - [p2_relationship_layer.py](file://open_notebook/skills/living/p2_relationship_layer.py#L21-L22)
+- [p2_agents.py](file://open_notebook/open_notebook/skills/p2_agents.py#L20-L35)
 - [api_endpoints.py](file://open_notebook/skills/living/api_endpoints.py#L18-L27)
 - [__init__.py](file://open_notebook/skills/living/__init__.py#L11-L49)
 
@@ -401,6 +635,11 @@ execution_result = await self.execute(context)
 - **插件化架构**：支持添加新的关系技能
 - **可配置阈值**：允许调整相似度和置信度阈值
 - **动态加载**：按需加载和卸载技能
+
+### 代理系统性能优化
+- **共享内存**：P2代理使用共享内存存储关系计划
+- **反馈循环**：自动学习和优化关系构建策略
+- **批量处理**：支持批量执行多个代理计划
 
 ## 故障排除指南
 
@@ -438,7 +677,27 @@ semantic_cluster_skill.similarity_threshold = 0.7
 entity_linker_skill.entity_patterns["custom"] = r"(?:自定义模式)"
 ```
 
-#### 3. 性能问题
+#### 3. 代理系统执行失败
+**症状**：P2代理无法执行关系构建计划
+**原因**：
+- 共享内存不可用
+- 反馈循环配置错误
+- 代理参数设置不当
+
+**解决方案**：
+```python
+# 检查共享内存状态
+shared_memory.check_health()
+
+# 调整代理参数
+trust_builder_agent.min_priority = "critical"
+trust_builder_agent.trust_sequence_length = 5
+
+# 重新初始化反馈循环
+feedback_orchestrator = FeedbackLoopOrchestrator()
+```
+
+#### 4. 性能问题
 **症状**：API响应缓慢
 **原因**：
 - 大量并发请求
@@ -460,29 +719,35 @@ def get_subgraph_optimized(node_ids):
 ```
 
 **章节来源**
-- [api_endpoints.py](file://open_notebook/skills/living/api_endpoints.py#L533-L546)
+- [api_endpoints.py](file://open_notebook/skills.living/api_endpoints.py#L533-L546)
 
 ## 结论
 
 P2关系层作为活体知识系统的重要组成部分，成功实现了以下目标：
 
 ### 主要成就
-1. **生物启发式设计**：完全采用生物体组织器官的概念设计
-2. **模块化架构**：四个专门的关系技能各司其职，协同工作
-3. **知识图谱构建**：提供了完整的知识关系发现和建模能力
-4. **API友好**：提供了清晰的REST API接口
-5. **可扩展性**：支持添加新的关系技能和优化现有算法
+1. **双重架构设计**：同时支持知识图谱构建和社交关系代理
+2. **生物启发式设计**：完全采用生物体组织器官的概念设计
+3. **模块化架构**：四个专门的关系技能各司其职，协同工作
+4. **知识图谱构建**：提供了完整的知识关系发现和建模能力
+5. **社交网络分析**：实现了基于四象限的信任建立和关系维护
+6. **反馈循环系统**：建立了自动学习和优化机制
+7. **API友好**：提供了清晰的REST API接口
+8. **可扩展性**：支持添加新的关系技能和优化现有算法
 
 ### 技术特色
 - **异步处理**：充分利用现代Python的异步特性
 - **智能缓存**：减少重复计算，提高响应速度
 - **灵活配置**：支持运行时调整各种参数
 - **错误处理**：完善的异常处理和恢复机制
+- **学习能力**：通过反馈循环持续改进关系构建策略
 
 ### 未来发展方向
 1. **机器学习集成**：引入更先进的NLP模型
-2. **实时更新**：支持知识图谱的实时更新
-3. **可视化界面**：提供知识图谱的可视化展示
+2. **实时更新**：支持知识图谱和关系网络的实时更新
+3. **可视化界面**：提供知识图谱和社交网络的可视化展示
 4. **API增强**：扩展更多的查询和操作接口
+5. **智能推荐**：基于关系分析提供个性化内容推荐
+6. **影响力预测**：预测关系扩展的效果和成功率
 
-P2关系层为整个活体知识系统奠定了坚实的基础，使其能够从简单的数据存储发展为具有智能关系发现能力的知识管理系统。
+P2关系层为整个活体知识系统奠定了坚实的基础，使其能够从简单的数据存储发展为具有智能关系发现能力和社交网络分析的完整知识管理系统。
