--- a/.qoder/repowiki/zh/content/后端架构/AI服务集成/模型发现与选择.md
+++ b/.qoder/repowiki/zh/content/后端架构/AI服务集成/模型发现与选择.md
@@ -14,14 +14,17 @@
 - [exceptions.py](file://open_notebook/exceptions.py)
 - [key_provider.py](file://open_notebook/ai/key_provider.py)
 - [page.tsx（前端）](file://frontend/src/app/(dashboard)/settings/api-keys/page.tsx)
+- [ModelSelector.tsx](file://frontend/src/components/common/ModelSelector.tsx)
+- [use-models.ts](file://frontend/src/lib/hooks/use-models.ts)
+- [models.ts](file://frontend/src/lib/api/models.ts)
 </cite>
 
 ## 更新摘要
 **变更内容**
-- DeepSeek提供商优先级显著提升：在PROVIDER_PRIORITY列表中位列第一，体现其在OPC场景中的成本效益和中英双语能力优势
-- 新增DeepSeek特定的模型偏好推荐：在MODEL_PREFERENCES中添加deepseek-chat、deepseek-reasoner、deepseek-coder等专用模型
-- 改进的提供商优先级列表：重新排序的供应商优先级，更好地平衡国际和中国AI提供商
-- 前端显示顺序优化：DeepSeek在API密钥配置界面中优先显示，提升用户体验
+- 新增Qwen 3.5 Plus模型支持：在通义千问模型系列中新增qwen3.5-plus模型，作为最新的Qwen 3.5系列旗舰模型
+- 扩展Qwen模型覆盖范围：Qwen_MODEL_TYPES中新增"qwen3.5"前缀模式，支持Qwen 3.5系列的所有变体
+- 更新模型偏好配置：MODEL_PREFERENCES中新增Qwen 3.5系列的偏好模型，包括qwen3.5-plus等旗舰型号
+- 前端显示优化：Qwen 3.5 Plus在模型选择界面中优先显示，提升用户体验
 
 ## 目录
 1. [简介](#简介)
@@ -37,10 +40,10 @@
 ## 简介
 本文件系统性阐述"模型发现与选择"机制，覆盖以下关键点：
 - 基于内容长度的模型自动选择算法：当输入文本超过阈值时，自动切换到"大上下文模型"。
-- 模型ID优先级规则：按提供商优先级与模型偏好模式进行优选，现已包含DeepSeek的最高优先级。
+- 模型ID优先级规则：按提供商优先级与模型偏好模式进行优选，现已包含DeepSeek的最高优先级和Qwen 3.5 Plus的最新支持。
 - 默认模型配置策略：通过数据库记录的默认模型槽位进行统一管理。
 - large_context 模型的选择逻辑、token 计数计算方法与模型类型验证机制。
-- 模型配置检查、错误处理与日志记录实现，包括DeepSeek等提供商的特殊处理。
+- 模型配置检查、错误处理与日志记录实现，包括DeepSeek、Qwen 3.5 Plus等提供商的特殊处理。
 - 最佳实践、性能优化建议与故障排除指南。
 
 ## 项目结构
@@ -50,11 +53,12 @@
 - API 层：模型查询、自动分配默认模型、测试连接等接口
 - 异常与日志：统一异常体系与日志记录
 - DeepSeek优先级增强：新增DeepSeek特定的模型推荐和优先级提升
+- Qwen 3.5 Plus支持：新增通义千问3.5系列的最新模型支持
 
 ```mermaid
 graph TB
 subgraph "AI 层"
-MD["model_discovery.py<br/>模型发现与分类<br/>DeepSeek优先级提升"]
+MD["model_discovery.py<br/>模型发现与分类<br/>DeepSeek优先级提升<br/>Qwen 3.5 Plus支持"]
 MM["models.py(ModelManager)<br/>默认模型与实例化"]
 PR["provision.py<br/>模型预配与选择"]
 end
@@ -63,7 +67,7 @@ TU["token_utils.py<br/>token计数"]
 CB["context_builder.py<br/>上下文构建与截断"]
 end
 subgraph "API 层"
-MR["routers/models.py<br/>模型API与自动分配<br/>DeepSeek最高优先级"]
+MR["routers/models.py<br/>模型API与自动分配<br/>DeepSeek最高优先级<br/>Qwen 3.5 Plus偏好"]
 MS["models_service.py<br/>服务封装"]
 API["models.py(API)<br/>请求/响应模型"]
 CHAT["routers/chat.py<br/>聊天会话与模型选择"]
@@ -71,7 +75,10 @@ end
 subgraph "基础设施"
 EX["exceptions.py<br/>异常定义"]
 KP["key_provider.py<br/>提供商配置支持"]
-FR["frontend/page.tsx<br/>前端显示优化<br/>DeepSeek优先显示"]
+FR["frontend/page.tsx<br/>前端显示优化<br/>DeepSeek优先显示<br/>Qwen 3.5 Plus优先"]
+SEL["frontend/ModelSelector.tsx<br/>模型选择组件"]
+HOOK["frontend/use-models.ts<br/>模型查询钩子"]
+API["frontend/models.ts<br/>前端API封装"]
 end
 MD --> MM
 PR --> MM
@@ -86,10 +93,12 @@ MS --> API
 MM --> EX
 KP --> MD
 FR --> MR
+SEL --> HOOK
+HOOK --> API
 ```
 
 **图表来源**
-- [model_discovery.py](file://open_notebook/ai/model_discovery.py#L1-L1071)
+- [model_discovery.py](file://open_notebook/ai/model_discovery.py#L1-L1073)
 - [models.py](file://open_notebook/ai/models.py#L1-L267)
 - [provision.py](file://open_notebook/ai/provision.py#L1-L61)
 - [token_utils.py](file://open_notebook/utils/token_utils.py#L1-L48)
@@ -101,9 +110,12 @@ FR --> MR
 - [exceptions.py](file://open_notebook/exceptions.py#L1-L71)
 - [key_provider.py](file://open_notebook/ai/key_provider.py#L316-L465)
 - [page.tsx（前端）](file://frontend/src/app/(dashboard)/settings/api-keys/page.tsx#L85-L93)
+- [ModelSelector.tsx](file://frontend/src/components/common/ModelSelector.tsx#L1-L67)
+- [use-models.ts](file://frontend/src/lib/hooks/use-models.ts#L1-L200)
+- [models.ts](file://frontend/src/lib/api/models.ts#L1-L106)
 
 **章节来源**
-- [model_discovery.py](file://open_notebook/ai/model_discovery.py#L1-L1071)
+- [model_discovery.py](file://open_notebook/ai/model_discovery.py#L1-L1073)
 - [models.py](file://open_notebook/ai/models.py#L1-L267)
 - [provision.py](file://open_notebook/ai/provision.py#L1-L61)
 - [token_utils.py](file://open_notebook/utils/token_utils.py#L1-L48)
@@ -115,13 +127,16 @@ FR --> MR
 - [exceptions.py](file://open_notebook/exceptions.py#L1-L71)
 - [key_provider.py](file://open_notebook/ai/key_provider.py#L316-L465)
 - [page.tsx（前端）](file://frontend/src/app/(dashboard)/settings/api-keys/page.tsx#L85-L93)
+- [ModelSelector.tsx](file://frontend/src/components/common/ModelSelector.tsx#L1-L67)
+- [use-models.ts](file://frontend/src/lib/hooks/use-models.ts#L1-L200)
+- [models.ts](file://frontend/src/lib/api/models.ts#L1-L106)
 
 ## 核心组件
-- 模型发现与分类：从各提供商拉取可用模型列表，并按名称模式分类为语言、嵌入、语音识别或语音合成模型。现已支持DeepSeek等多家提供商。
+- 模型发现与分类：从各提供商拉取可用模型列表，并按名称模式分类为语言、嵌入、语音识别或语音合成模型。现已支持DeepSeek、Qwen 3.5 Plus等多家提供商。
 - 默认模型与实例化：通过数据库记录的默认模型槽位加载对应模型；支持凭据注入与环境变量回退。
 - 模型预配与选择：根据输入内容长度阈值自动选择 large_context 模型，否则按显式 model_id 或默认类型选择。
 - token 计数与上下文截断：使用 o200k_base 编码估算 token 数量；上下文构建器支持按最大 token 截断。
-- API 自动分配：按提供商优先级与模型偏好模式，自动为各类默认槽位分配最优可用模型，现已包含DeepSeek的最高优先级。
+- API 自动分配：按提供商优先级与模型偏好模式，自动为各类默认槽位分配最优可用模型，现已包含DeepSeek的最高优先级和Qwen 3.5 Plus的最新支持。
 
 **章节来源**
 - [model_discovery.py](file://open_notebook/ai/model_discovery.py#L135-L166)
@@ -132,7 +147,7 @@ FR --> MR
 - [models.py（路由）](file://api/routers/models.py#L634-L782)
 
 ## 架构总览
-模型发现与选择贯穿"发现—登记—配置—实例化—调用"的完整链路，同时在运行时依据输入规模动态选择合适模型。DeepSeek的优先级提升确保系统在OPC场景中能够优先选择成本效益更高的模型。
+模型发现与选择贯穿"发现—登记—配置—实例化—调用"的完整链路，同时在运行时依据输入规模动态选择合适模型。DeepSeek的优先级提升和Qwen 3.5 Plus的支持确保系统在OPC场景中能够优先选择成本效益更高的模型。
 
 ```mermaid
 sequenceDiagram
@@ -145,7 +160,7 @@ participant INST as "模型实例化(ModelManager)"
 participant TK as "token_utils"
 participant PR as "provision(运行时选择)"
 U->>API : 请求模型列表/自动分配
-API->>DISC : 发现提供商模型(DeepSeek优先)
+API->>DISC : 发现提供商模型(DeepSeek优先, Qwen 3.5 Plus支持)
 DISC->>DB : 同步注册新模型
 API->>CFG : 读取默认模型槽位
 API->>INST : 加载默认模型(凭据/环境回退)
@@ -168,8 +183,8 @@ INST-->>U : 返回推理结果
 
 ### 组件A：模型发现与分类（已更新）
 - 功能要点
-  - 针对多家提供商（OpenAI、Anthropic、Google、Ollama、Groq、Mistral、DeepSeek、xAI、OpenRouter、Voyage、ElevenLabs、OpenAI-Compatible 等）分别实现发现函数。
-  - **增强**：DeepSeek提供完整的动态API发现机制，支持deepseek-chat、deepseek-reasoner、deepseek-coder等专用模型。
+  - 针对多家提供商（OpenAI、Anthropic、Google、Ollama、Groq、Mistral、DeepSeek、xAI、OpenRouter、Voyage、ElevenLabs、OpenAI-Compatible、Qwen等）分别实现发现函数。
+  - **增强**：DeepSeek提供完整的动态API发现机制，支持deepseek-chat、deepseek-reasoner、deepseek-coder等专用模型；**新增**Qwen 3.5 Plus支持，包括qwen3.5-plus等最新旗舰型号。
   - 使用名称模式映射进行模型类型分类（语言、嵌入、语音识别、语音合成），部分提供商采用静态清单。
   - 支持同步到数据库：批量去重、新增与现有统计。
 - 关键数据结构
@@ -184,7 +199,7 @@ flowchart TD
 Start(["开始"]) --> CheckEnv["检查环境变量/凭据"]
 CheckEnv --> CallDiscover["调用提供商发现函数"]
 CallDiscover --> ParseResp["解析返回的模型列表"]
-ParseResp --> Classify["按名称模式分类模型类型"]
+ParseResp --> Classify["按名称模式分类模型类型<br/>Qwen 3.5 Plus支持"]
 Classify --> SyncDB{"是否需要同步到数据库？"}
 SyncDB --> |是| BatchFetch["批量查询现有模型"]
 BatchFetch --> Dedup["去重判断(名称+类型)"]
@@ -196,12 +211,14 @@ SyncDB --> |否| Done
 **图表来源**
 - [model_discovery.py](file://open_notebook/ai/model_discovery.py#L173-L204)
 - [model_discovery.py](file://open_notebook/ai/model_discovery.py#L632-L724)
+- [model_discovery.py](file://open_notebook/ai/model_discovery.py#L80-L108)
 
 **章节来源**
 - [model_discovery.py](file://open_notebook/ai/model_discovery.py#L135-L166)
 - [model_discovery.py](file://open_notebook/ai/model_discovery.py#L589-L630)
 - [model_discovery.py](file://open_notebook/ai/model_discovery.py#L632-L724)
 - [model_discovery.py](file://open_notebook/ai/model_discovery.py#L663-L748)
+- [model_discovery.py](file://open_notebook/ai/model_discovery.py#L80-L108)
 
 ### 组件B：默认模型与实例化
 - 功能要点
@@ -292,8 +309,9 @@ Ok --> |否| RaiseErr["记录错误并抛出异常"]
 - 优先级规则
   - **更新**：PROVIDER_PRIORITY 定义提供商优先顺序，现已将DeepSeek列为最高优先级：
     - deepseek、openai、anthropic、google、moonshot、qwen、zhipu、mistral、groq、xai、openrouter、ollama、azure、openai_compatible
-  - MODEL_PREFERENCES 定义各提供商内的偏好模型名称模式，**新增**DeepSeek特定推荐：
+  - MODEL_PREFERENCES 定义各提供商内的偏好模型名称模式，**新增**DeepSeek和Qwen 3.5 Plus特定推荐：
     - deepseek: ["deepseek-chat", "deepseek-reasoner", "deepseek-coder"]
+    - qwen: ["qwen-max", "qwen-plus", "qwen3.5-plus", "qwen-coder-plus", "qwen2.5-72b-instruct"]
   - 其他提供商偏好保持不变，如gpt-4o、claude-3-5-sonnet等。
 - 选择逻辑
   - 将可用模型按类型分组，遍历 PROVIDER_PRIORITY，优先选择匹配 MODEL_PREFERENCES 的模型；若无偏好匹配则选择首个可用模型。
@@ -310,7 +328,7 @@ participant SEL as "_get_preferred_model"
 participant D as "DefaultModels"
 C->>R : POST /models/auto-assign
 R->>Q : 查询所有模型(按类型分组)
-R->>SEL : 为每个槽位选择最佳模型(DeepSeek优先)
+R->>SEL : 为每个槽位选择最佳模型(DeepSeek优先, Qwen 3.5 Plus支持)
 SEL->>SEL : 按提供商优先级与偏好筛选
 SEL-->>R : 返回最佳模型
 R->>D : 更新默认模型槽位
@@ -322,7 +340,7 @@ R-->>C : 返回分配结果
 - [models.py（路由）](file://api/routers/models.py#L634-L676)
 
 **章节来源**
-- [models.py（路由）](file://api/routers/models.py#L87-L109)
+- [models.py（路由）](file://api/routers/models.py#L87-L116)
 - [models.py（路由）](file://api/routers/models.py#L634-L782)
 
 ### 组件E：上下文构建与截断
@@ -339,30 +357,53 @@ R-->>C : 返回分配结果
 - [context_builder.py](file://open_notebook/utils/context_builder.py#L346-L391)
 - [token_utils.py](file://open_notebook/utils/token_utils.py#L15-L48)
 
-### 组件F：DeepSeek优先级增强（新增）
+### 组件F：DeepSeek优先级增强与Qwen 3.5 Plus支持（新增）
 - DeepSeek优先级提升
   - **最高优先级**：在PROVIDER_PRIORITY列表中位列第一，体现其在OPC场景中的成本效益和中英双语能力优势
   - **专用模型推荐**：MODEL_PREFERENCES中新增deepseek-chat、deepseek-reasoner、deepseek-coder等专用模型
   - **动态API发现**：完整的DeepSeek API集成，支持实时模型列表获取
+- **Qwen 3.5 Plus支持**
+  - **最新旗舰模型**：在QWEN_MODELS中新增"qwen3.5-plus"作为Qwen 3.5系列的旗舰型号
+  - **扩展模型覆盖**：QWEN_MODEL_TYPES中新增"qwen3.5"前缀模式，支持Qwen 3.5系列的所有变体
+  - **偏好配置**：MODEL_PREFERENCES中新增qwen3.5-plus等Qwen 3.5系列的偏好模型
+  - **静态模型列表**：当API发现失败时提供Qwen 3.5 Plus的静态模型回退
 - 前端显示优化
-  - **优先显示**：在API密钥配置界面中DeepSeek优先显示，提升用户体验
+  - **优先显示**：在API密钥配置界面中DeepSeek和Qwen 3.5 Plus优先显示，提升用户体验
   - **静态模型列表**：当API发现失败时提供静态模型回退
 - 配置支持
-  - 通过环境变量 `DEEPSEEK_API_KEY` 进行配置
+  - 通过环境变量 `DEEPSEEK_API_KEY` 和 `DASHSCOPE_API_KEY` 进行配置
   - 支持凭据注入和环境变量回退
 
 **章节来源**
 - [models.py（路由）](file://api/routers/models.py#L87-L116)
 - [model_discovery.py](file://open_notebook/ai/model_discovery.py#L498-L529)
+- [model_discovery.py](file://open_notebook/ai/model_discovery.py#L80-L108)
 - [page.tsx（前端）](file://frontend/src/app/(dashboard)/settings/api-keys/page.tsx#L85-L93)
 - [page.tsx（前端）](file://frontend/src/app/(dashboard)/settings/api-keys/page.tsx#L165-L167)
+
+### 组件G：前端模型选择组件（已更新）
+- ModelSelector组件
+  - 支持按模型类型过滤（language、embedding、speech_to_text、text_to_speech）
+  - 显示模型名称和提供商信息
+  - 集成React Query进行模型数据管理
+- use-models钩子
+  - 提供模型查询、创建、删除、默认配置等功能
+  - 集成自动分配默认模型的mutate操作
+- modelsApi封装
+  - 提供完整的模型管理API调用方法
+  - 支持模型发现、同步、测试等操作
+
+**章节来源**
+- [ModelSelector.tsx](file://frontend/src/components/common/ModelSelector.tsx#L1-L67)
+- [use-models.ts](file://frontend/src/lib/hooks/use-models.ts#L1-L200)
+- [models.ts](file://frontend/src/lib/api/models.ts#L1-L106)
 
 ## 依赖关系分析
 - 模块耦合
   - ModelManager 依赖 DefaultModels 与 Credential，负责模型实例化与类型校验。
   - provision 依赖 token_utils 进行 token 计数，依赖 ModelManager 获取默认模型。
   - API 路由依赖 ModelManager 与 DefaultModels，提供模型查询与自动分配。
-  - **增强**：DeepSeek优先级提升影响整个自动分配流程，使其成为首选提供商。
+  - **增强**：DeepSeek优先级提升和Qwen 3.5 Plus支持影响整个自动分配流程，使其成为首选提供商。
 - 外部依赖
   - Esperanto：统一的 AI 模型工厂，负责具体提供商的模型实例化。
   - httpx：异步 HTTP 客户端，用于各提供商模型发现。
@@ -380,6 +421,8 @@ APIR --> MD["model_discovery.py"]
 APIR --> EX["exceptions.py"]
 KP["key_provider.py"] --> MD
 FR["frontend/page.tsx"] --> APIR
+SEL["frontend/ModelSelector.tsx"] --> HOOK["frontend/use-models.ts"]
+HOOK --> API["frontend/models.ts"]
 ```
 
 **图表来源**
@@ -387,26 +430,32 @@ FR["frontend/page.tsx"] --> APIR
 - [models.py](file://open_notebook/ai/models.py#L1-L267)
 - [models.py（路由）](file://api/routers/models.py#L1-L200)
 - [models_service.py](file://api/models_service.py#L1-L113)
-- [model_discovery.py](file://open_notebook/ai/model_discovery.py#L1-L1071)
+- [model_discovery.py](file://open_notebook/ai/model_discovery.py#L1-L1073)
 - [exceptions.py](file://open_notebook/exceptions.py#L1-L71)
 - [key_provider.py](file://open_notebook/ai/key_provider.py#L316-L465)
 - [page.tsx（前端）](file://frontend/src/app/(dashboard)/settings/api-keys/page.tsx#L1-L1560)
+- [ModelSelector.tsx](file://frontend/src/components/common/ModelSelector.tsx#L1-L67)
+- [use-models.ts](file://frontend/src/lib/hooks/use-models.ts#L1-L200)
+- [models.ts](file://frontend/src/lib/api/models.ts#L1-L106)
 
 **章节来源**
 - [models.py](file://open_notebook/ai/models.py#L1-L267)
 - [models.py（路由）](file://api/routers/models.py#L1-L200)
 - [provision.py](file://open_notebook/ai/provision.py#L1-L61)
-- [model_discovery.py](file://open_notebook/ai/model_discovery.py#L1-L1071)
+- [model_discovery.py](file://open_notebook/ai/model_discovery.py#L1-L1073)
 - [models_service.py](file://api/models_service.py#L1-L113)
 - [exceptions.py](file://open_notebook/exceptions.py#L1-L71)
 - [key_provider.py](file://open_notebook/ai/key_provider.py#L316-L465)
 - [page.tsx（前端）](file://frontend/src/app/(dashboard)/settings/api-keys/page.tsx#L1-L1560)
+- [ModelSelector.tsx](file://frontend/src/components/common/ModelSelector.tsx#L1-L67)
+- [use-models.ts](file://frontend/src/lib/hooks/use-models.ts#L1-L200)
+- [models.ts](file://frontend/src/lib/api/models.ts#L1-L106)
 
 ## 性能考量
 - 模型发现
   - 并行发现多个提供商模型，减少等待时间；对每个提供商独立超时控制，避免阻塞。
   - 同步阶段批量查询现有模型，降低 N+1 查询开销。
-  - **增强**：DeepSeek优先级提升减少不必要的API调用，提高选择效率。
+  - **增强**：DeepSeek优先级提升和Qwen 3.5 Plus支持减少不必要的API调用，提高选择效率。
 - token 计数
   - 优先使用缓存编码表（TIKTOKEN_CACHE_DIR），提升重复计算性能。
   - 导入失败时使用简单估算，避免阻塞。
@@ -445,6 +494,11 @@ FR["frontend/page.tsx"] --> APIR
   - 现象：期望DeepSeek但选择了其他提供商。
   - 排查：检查PROVIDER_PRIORITY配置、MODEL_PREFERENCES偏好设置；确认DeepSeek API密钥配置正确。
   - 参考：[models.py（路由）](file://api/routers/models.py#L87-L116)
+- **新增**："Qwen 3.5 Plus模型不可用"
+  - 现象：期望Qwen 3.5 Plus但选择了其他Qwen型号。
+  - 排查：检查DASHSCOPE_API_KEY配置；确认Qwen 3.5 Plus在MODEL_PREFERENCES中的偏好设置；检查模型发现是否成功。
+  - 参考：[model_discovery.py](file://open_notebook/ai/model_discovery.py#L80-L108)
+  - 参考：[models.py（路由）](file://api/routers/models.py#L112)
 
 **章节来源**
 - [models.py](file://open_notebook/ai/models.py#L220-L264)
@@ -453,6 +507,7 @@ FR["frontend/page.tsx"] --> APIR
 - [token_utils.py](file://open_notebook/utils/token_utils.py#L31-L33)
 - [context_builder.py](file://open_notebook/utils/context_builder.py#L132-L134)
 - [models.py（路由）](file://api/routers/models.py#L87-L116)
+- [model_discovery.py](file://open_notebook/ai/model_discovery.py#L80-L108)
 
 ## 结论
-本机制通过"发现—登记—配置—实例化—运行时选择"的闭环，实现了灵活、可扩展且健壮的模型管理与选择能力。**DeepSeek优先级的显著提升**进一步增强了系统的智能化服务能力，通过最高优先级的提供商选择和专用模型推荐，确保系统在OPC场景中能够优先选择成本效益更高、性能更优的模型。结合完整的API自动分配与完善的日志/异常体系，便于运维与排错，为用户提供更加高效、可靠的AI模型服务体验。
+本机制通过"发现—登记—配置—实例化—运行时选择"的闭环，实现了灵活、可扩展且健壮的模型管理与选择能力。**DeepSeek优先级的显著提升和Qwen 3.5 Plus的最新支持**进一步增强了系统的智能化服务能力，通过最高优先级的提供商选择和最新旗舰模型推荐，确保系统在OPC场景中能够优先选择成本效益更高、性能更优的模型。结合完整的API自动分配与完善的日志/异常体系，便于运维与排错，为用户提供更加高效、可靠的AI模型服务体验。
