--- a/.qoder/repowiki/zh/content/安装与部署/安装与部署.md
+++ b/.qoder/repowiki/zh/content/安装与部署/安装与部署.md
@@ -6,6 +6,7 @@
 - [docker-compose.yml](file://docker-compose.yml)
 - [Dockerfile](file://Dockerfile)
 - [Dockerfile.single](file://Dockerfile.single)
+- [Dockerfile.living](file://Dockerfile.living)
 - [.env.example](file://.env.example)
 - [pyproject.toml](file://pyproject.toml)
 - [docs/1-INSTALLATION/index.md](file://docs/1-INSTALLATION/index.md)
@@ -20,6 +21,14 @@
 - [docs/5-CONFIGURATION/advanced.md](file://docs/5-CONFIGURATION/advanced.md)
 - [supervisord.conf](file://supervisord.conf)
 - [supervisord.single.conf](file://supervisord.single.conf)
+- [docker-compose.living.yml](file://docker-compose.living.yml)
+- [docs/living_system_architecture.md](file://docs/living_system_architecture.md)
+- [docs/living_system_implementation_summary.md](file://docs/living_system_implementation_summary.md)
+- [scripts/start_living.sh](file://scripts/start_living.sh)
+- [scripts/living_system.bat](file://scripts/living_system.bat)
+- [open_notebook/skills/living/README.md](file://open_notebook/skills/living/README.md)
+- [open_notebook/skills/living/api_server.py](file://open_notebook/skills/living/api_server.py)
+- [open_notebook/skills/living/examples/p0_perception_organ.py](file://open_notebook/skills/living/examples/p0_perception_organ.py)
 </cite>
 
 ## 目录
@@ -28,17 +37,19 @@
 3. [核心组件](#核心组件)
 4. [架构总览](#架构总览)
 5. [详细组件分析](#详细组件分析)
-6. [依赖关系分析](#依赖关系分析)
-7. [性能考虑](#性能考虑)
-8. [故障排查指南](#故障排查指南)
-9. [结论](#结论)
-10. [附录](#附录)
+6. [活体知识系统部署](#活体知识系统部署)
+7. [依赖关系分析](#依赖关系分析)
+8. [性能考虑](#性能考虑)
+9. [故障排查指南](#故障排查指南)
+10. [结论](#结论)
+11. [附录](#附录)
 
 ## 简介
 本指南面向不同技术背景与运维需求的用户，提供 Open Notebook 的完整安装与部署方案，覆盖以下部署方式：
 - Docker Compose 多容器部署（推荐用于大多数用户）
 - 单容器部署（适合共享主机或特定平台限制）
 - 从源码编译部署（开发者与贡献者）
+- **新增：活体知识系统独立部署**（专门的知识管理系统）
 
 同时，文档涵盖生产环境最佳实践、性能调优、安全加固、网络与反向代理配置、数据库设置、环境变量说明、部署后验证与常见问题排查。
 
@@ -48,6 +59,7 @@ Open Notebook 采用前后端分离与多服务协同的架构：
 - 后端：FastAPI（REST API）
 - 数据库：SurrealDB（嵌入式存储）
 - 运行时编排：Supervisor（统一管理 API、Worker、前端进程）
+- **新增：活体知识系统**：独立的生物启发式智能体架构，提供专门的知识管理系统
 
 ```mermaid
 graph TB
@@ -56,6 +68,9 @@ A["SurrealDB<br/>端口 8000"]
 B["Open Notebook API<br/>端口 5055"]
 C["Open Notebook 前端<br/>端口 8502"]
 D["Worker命令执行<br/>无额外端口"]
+E["活体知识系统API<br/>端口 8888"]
+F["PostgreSQL + TimescaleDB<br/>端口 5432/5433"]
+G["P4数据代理<br/>端口 8888"]
 end
 subgraph "外部"
 U["浏览器/客户端"]
@@ -66,17 +81,21 @@ RP --> C
 C --> |"内部重写到"| B
 B --> A
 D --> B
+E --> F
+G --> F
 ```
 
-图表来源
+**图表来源**
 - [docker-compose.yml](file://docker-compose.yml#L1-L37)
+- [docker-compose.living.yml](file://docker-compose.living.yml#L1-L148)
 - [supervisord.conf](file://supervisord.conf#L1-L41)
 - [supervisord.single.conf](file://supervisord.single.conf#L1-L52)
 
-章节来源
+**章节来源**
 - [docker-compose.yml](file://docker-compose.yml#L1-L37)
 - [Dockerfile](file://Dockerfile#L88-L114)
 - [Dockerfile.single](file://Dockerfile.single#L77-L81)
+- [Dockerfile.living](file://Dockerfile.living#L1-L70)
 - [supervisord.conf](file://supervisord.conf#L7-L41)
 - [supervisord.single.conf](file://supervisord.single.conf#L7-L52)
 
@@ -92,10 +111,16 @@ D --> B
   - 使用 RocksDB 存储，支持持久化卷
 - Worker（命令执行）
   - 由 surreal-commands-worker 提供，负责异步任务处理
+- **新增：活体知识系统**
+  - **API服务**：暴露端口 8888，提供 RESTful API
+  - **数据库**：PostgreSQL + TimescaleDB，端口 5432/5433
+  - **数据代理**：P4 Data Agent，负责数据生命周期管理
+  - **架构**：基于五层生物启发式架构（细胞层、组织层、器官层、经络层、穴位层）
 
-章节来源
+**章节来源**
 - [Dockerfile](file://Dockerfile#L79-L89)
 - [Dockerfile.single](file://Dockerfile.single#L62-L78)
+- [Dockerfile.living](file://Dockerfile.living#L52-L69)
 - [supervisord.conf](file://supervisord.conf#L7-L41)
 - [supervisord.single.conf](file://supervisord.single.conf#L7-L52)
 
@@ -122,11 +147,20 @@ F2 --> |"内部路由 /api/*"| A2
 A2 --> S2
 W2 --> A2
 end
+subgraph "活体知识系统独立部署"
+P1["PostgreSQL:5432/5433"]
+A3["Living API:8888"]
+D1["P4 Data Agent:8888"]
+A3 --> P1
+D1 --> P1
+end
 ```
 
-图表来源
+**图表来源**
 - [docker-compose.yml](file://docker-compose.yml#L1-L37)
+- [docker-compose.living.yml](file://docker-compose.living.yml#L1-L148)
 - [Dockerfile.single](file://Dockerfile.single#L34-L81)
+- [Dockerfile.living](file://Dockerfile.living#L29-L70)
 - [supervisord.single.conf](file://supervisord.single.conf#L7-L52)
 
 ## 详细组件分析
@@ -159,7 +193,7 @@ end
   - 密码保护（OPEN_NOTEBOOK_PASSWORD）
   - 严格的防火墙策略（仅暴露前端端口，隐藏数据库与 API 端口）
 
-章节来源
+**章节来源**
 - [docs/1-INSTALLATION/docker-compose.md](file://docs/1-INSTALLATION/docker-compose.md#L1-L357)
 - [docker-compose.yml](file://docker-compose.yml#L1-L37)
 - [examples/docker-compose-ollama.yml](file://examples/docker-compose-ollama.yml#L1-L64)
@@ -184,7 +218,7 @@ end
   - 单容器内存占用更低，但扩展性有限
   - 服务耦合度更高，升级与迁移需整体考虑
 
-章节来源
+**章节来源**
 - [docs/1-INSTALLATION/single-container.md](file://docs/1-INSTALLATION/single-container.md#L1-L136)
 - [Dockerfile.single](file://Dockerfile.single#L1-L81)
 - [supervisord.single.conf](file://supervisord.single.conf#L1-L52)
@@ -206,92 +240,276 @@ end
   - 测试：pytest
   - 常用命令：make start-all、make api、make database
 
-章节来源
+**章节来源**
 - [docs/1-INSTALLATION/from-source.md](file://docs/1-INSTALLATION/from-source.md#L1-L181)
 - [.env.example](file://.env.example#L1-L60)
 - [pyproject.toml](file://pyproject.toml#L1-L99)
 
+## 活体知识系统部署
+
+### 概述
+活体知识系统是一个独立的生物启发式智能体架构，提供专门的知识管理系统。该系统采用五层架构设计，模拟人体组织的自组织、自运行特性，适用于需要复杂知识处理和自动化决策的场景。
+
+### 架构特点
+- **五层架构**：细胞层（Skill）、组织层（Agent）、器官层（System）、经络层（Meridian）、穴位层（Trigger）
+- **自组织**：Skill 细胞可自主决定何时执行（基于时序）
+- **自愈合**：Agent 组织监控 Skill 健康状态，自动重试失败任务
+- **可扩展**：新增 Skill/Agent 只需注册到相应 Registry
+- **松耦合**：Meridians 实现组件间解耦通信
+
+### 独立部署方式
+
+#### Docker Compose 部署（推荐）
+- **适用场景**：生产环境、需要完整监控和管理
+- **关键特性**
+  - PostgreSQL + TimescaleDB 数据库集群
+  - 完整的健康检查和自动重启机制
+  - 支持 pgAdmin 数据库管理界面
+  - 独立的日志卷管理
+- **快速开始**
+  ```bash
+  # 启动完整服务栈
+  docker-compose -f docker-compose.living.yml up -d
+  
+  # 查看服务状态
+  docker-compose -f docker-compose.living.yml ps
+  
+  # 查看日志
+  docker-compose -f docker-compose.living.yml logs -f
+  
+  # 停止服务
+  docker-compose -f docker-compose.living.yml down
+  ```
+- **端口映射**
+  - 8888: API 服务（活体知识系统）
+  - 5433: PostgreSQL 数据库（避免与系统数据库冲突）
+  - 5050: pgAdmin 数据库管理界面（可选）
+
+#### 本地开发部署
+- **适用场景**：开发调试、快速验证
+- **启动方式**
+  ```bash
+  # 使用脚本启动（推荐）
+  ./scripts/start_living.sh dev
+  
+  # 或直接启动
+  export LIVING_DB_HOST=localhost
+  export LIVING_DB_PORT=5433
+  export LIVING_PORT=8888
+  python -m open_notebook.skills.living.api_server
+  ```
+
+#### Windows 用户部署
+```cmd
+REM 启动服务
+.\scripts\living_system.bat up
+
+REM 查看日志
+.\scripts\living_system.bat logs
+
+REM 连接到数据库
+.\scripts\living_system.bat psql
+
+REM 停止服务
+.\scripts\living_system.bat down
+```
+
+### 环境变量配置
+- **数据库连接**
+  - LIVING_DB_HOST: 数据库主机地址（默认：postgres）
+  - LIVING_DB_PORT: 数据库端口（默认：5432）
+  - LIVING_DB_NAME: 数据库名称（默认：living_system）
+  - LIVING_DB_USER: 数据库用户名（默认：living）
+  - LIVING_DB_PASSWORD: 数据库密码（默认：living）
+
+- **服务配置**
+  - LIVING_HOST: API 主机地址（默认：0.0.0.0）
+  - LIVING_PORT: API 端口（默认：8888）
+
+- **功能开关**
+  - LIVING_P0_ENABLED: 是否启用 P0 感知系统（默认：true）
+  - LIVING_P0_SYNC_HOUR: P0 同步时间（默认：9）
+  - LIVING_DATA_ENABLED: 是否启用数据功能（默认：true）
+
+- **日志配置**
+  - LOG_LEVEL: 日志级别（默认：INFO）
+
+### API 端点
+系统提供完整的 RESTful API：
+
+| 端点 | 方法 | 功能 |
+|------|------|------|
+| `/` | GET | 系统信息 |
+| `/health` | GET | 健康检查 |
+| `/stats` | GET | 系统统计 |
+| `/cells` | GET | 列出所有Skill |
+| `/cells/{id}` | GET | Skill详情 |
+| `/cells/{id}/invoke` | POST | 执行Skill |
+| `/agents` | GET | 列出所有Agent |
+| `/agents/{id}/execute` | POST | 执行Agent |
+| `/agents/{id}/stimulate` | POST | 刺激Agent |
+| `/triggers` | GET | 列出触发器 |
+| `/triggers/{id}/activate` | POST | 激活触发器 |
+| `/meridians` | GET | 经络状态 |
+| `/data/lineage/{id}` | GET | 数据血缘 |
+
+### 数据库设计
+系统使用 PostgreSQL + TimescaleDB 组合：
+
+- **核心表结构**
+  - `cell_states`: 存储 Skill 状态
+  - `agent_states`: 存储 Agent 状态
+  - `meridian_metrics`: 经络指标（TimescaleDB 超表）
+  - `trigger_records`: 触发器记录
+  - `data_lineage`: 数据血缘关系
+
+- **时序数据优化**
+  - 使用 TimescaleDB 处理时间序列数据
+  - 自动分区管理，支持长期历史数据存储
+
+### 部署验证
+- **健康检查**
+  ```bash
+  curl http://localhost:8888/health
+  ```
+
+- **API 文档**
+  - 访问 http://localhost:8888/docs 查看接口文档
+
+- **数据库连接**
+  ```bash
+  # 连接到 PostgreSQL
+  docker exec -it living_postgres psql -U living -d living_system
+  
+  # 查看表结构
+  \dt
+  ```
+
+### 常见任务
+- **重置数据**
+  ```bash
+  # 清空所有数据（谨慎使用）
+  ./scripts/start_living.sh reset
+  ```
+
+- **查看日志**
+  ```bash
+  # 实时查看日志
+  ./scripts/start_living.sh logs
+  ```
+
+- **停止服务**
+  ```bash
+  # 停止所有服务
+  ./scripts/start_living.sh stop
+  ```
+
+**章节来源**
+- [docker-compose.living.yml](file://docker-compose.living.yml#L1-L148)
+- [Dockerfile.living](file://Dockerfile.living#L1-L70)
+- [docs/living_system_architecture.md](file://docs/living_system_architecture.md#L1-L264)
+- [docs/living_system_implementation_summary.md](file://docs/living_system_implementation_summary.md#L1-L154)
+- [scripts/start_living.sh](file://scripts/start_living.sh#L1-L77)
+- [scripts/living_system.bat](file://scripts/living_system.bat#L1-L94)
+- [open_notebook/skills/living/README.md](file://open_notebook/skills/living/README.md#L1-L286)
+- [open_notebook/skills/living/api_server.py](file://open_notebook/skills.living/api_server.py#L1-L200)
+- [open_notebook/skills.living/examples/p0_perception_organ.py](file://open_notebook/skills.living/examples/p0_perception_organ.py#L1-L200)
+
 ### 环境变量与配置要点
-- 必填项
+- **必填项**
   - OPEN_NOTEBOOK_ENCRYPTION_KEY：凭据加密密钥（强烈建议强口令）
-- 数据库（SurrealDB）
+- **数据库（SurrealDB）**
   - SURREAL_URL、SURREAL_USER、SURREAL_PASSWORD、SURREAL_NAMESPACE、SURREAL_DATABASE
-- 反向代理与网络
+- **活体知识系统数据库（PostgreSQL）**
+  - LIVING_DB_HOST、LIVING_DB_PORT、LIVING_DB_NAME、LIVING_DB_USER、LIVING_DB_PASSWORD
+- **反向代理与网络**
   - API_URL：前端访问 API 的外部 URL（务必带 https://）
   - HOSTNAME：Docker 中默认 0.0.0.0，确保可被反向代理访问
-- 性能与并发
+- **性能与并发**
   - SURREAL_COMMANDS_MAX_TASKS：并发数据库任务数
   - API_CLIENT_TIMEOUT、ESPERANTO_LLM_TIMEOUT：超时配置
-- 安全
+- **安全**
   - OPEN_NOTEBOOK_PASSWORD：实例级密码保护（Basic Auth）
   - HTTPS：始终在生产环境启用 TLS
-- 示例与清单
-  - 参考环境变量完整清单与分组说明
+- **活体知识系统特性**
+  - LIVING_P0_ENABLED、LIVING_DATA_ENABLED：功能开关
+  - LIVING_P0_SYNC_HOUR：P0 同步时间配置
 
-章节来源
+**章节来源**
 - [docs/5-CONFIGURATION/environment-reference.md](file://docs/5-CONFIGURATION/environment-reference.md#L1-L275)
 - [docs/5-CONFIGURATION/advanced.md](file://docs/5-CONFIGURATION/advanced.md#L1-L545)
 - [docs/5-CONFIGURATION/security.md](file://docs/5-CONFIGURATION/security.md#L1-L397)
+- [docker-compose.living.yml](file://docker-compose.living.yml#L46-L61)
 
 ### 反向代理与域名配置
-- 简化说明
+- **简化说明**
   - v1.1+ 版本使用 Next.js 重写，只需代理前端端口 8502，内部自动转发 /api/* 到后端 5055
-- 常见方案
+  - **活体知识系统**：可直接代理 8888 端口，无需内部路由
+- **常见方案**
   - Nginx：设置 HTTPS、上传大小限制、WebSocket 升级头
   - Caddy：自动 HTTPS，长连接超时配置
   - Traefik：静态配置 serversTransport 超时，动态标签路由
-- 关键点
+- **关键点**
   - 显式设置 API_URL（含协议与域名）
-  - 长耗时操作（内容处理、播客生成）需足够超时
+  - 长耗时操作（内容处理、播客生成、数据处理）需足够超时
   - 文件上传超过默认大小时，需在反向代理层调整限制
 
-章节来源
+**章节来源**
 - [docs/5-CONFIGURATION/reverse-proxy.md](file://docs/5-CONFIGURATION/reverse-proxy.md#L1-L800)
 
 ### 安全配置与最佳实践
-- 凭据加密
+- **凭据加密**
   - 使用 OPEN_NOTEBOOK_ENCRYPTION_KEY 加密数据库中的 API 凭据
   - Docker Secrets 支持（_FILE 后缀）
-- 实例保护
+- **实例保护**
   - OPEN_NOTEBOOK_PASSWORD：启用密码保护
   - 仅在公网暴露前端端口，隐藏数据库与 API 端口
-- 企业级加固
+- **企业级加固**
   - 反向代理 + 强 TLS
   - 防火墙规则、速率限制、审计日志（自建）
-- 认证与授权
+- **认证与授权**
   - 基于密码的会话保护（非企业级 RBAC）
   - API 请求需携带 Bearer Token（密码）
+- **活体知识系统安全**
+  - 数据库访问控制（PostgreSQL 用户权限）
+  - API 访问控制（可扩展中间件）
+  - 日志审计（敏感信息脱敏）
 
-章节来源
+**章节来源**
 - [docs/5-CONFIGURATION/security.md](file://docs/5-CONFIGURATION/security.md#L1-L397)
 
 ### 部署后的验证步骤
-- 健康检查
+- **健康检查**
   - curl http://localhost:5055/health
-- 前端访问
+  - curl http://localhost:8888/health
+- **前端访问**
   - 打开 http://localhost:8502，确认页面加载正常
-- API 文档
+- **API 文档**
   - 访问 http://localhost:5055/docs，查看接口列表
-- 凭据配置
+  - 访问 http://localhost:8888/docs，查看活体知识系统接口
+- **凭据配置**
   - 进入 Settings → API Keys，添加并测试提供商凭据
-- 反向代理验证
+- **反向代理验证**
   - 若使用反代，检查浏览器控制台与 API_URL 自动检测日志
 
-章节来源
+**章节来源**
 - [docs/1-INSTALLATION/docker-compose.md](file://docs/1-INSTALLATION/docker-compose.md#L94-L123)
 - [docs/1-INSTALLATION/single-container.md](file://docs/1-INSTALLATION/single-container.md#L42-L54)
 - [docs/5-CONFIGURATION/reverse-proxy.md](file://docs/5-CONFIGURATION/reverse-proxy.md#L593-L640)
 
 ## 依赖关系分析
-- 运行时依赖
+- **运行时依赖**
   - Python 3.11+（后端）
   - Node.js 20.x（前端构建与运行）
   - FFmpeg（音频/播客处理）
   - Supervisor（进程管理）
-- 容器镜像
+  - **PostgreSQL 15+**（活体知识系统）
+  - **TimescaleDB**（时序数据优化）
+- **容器镜像**
   - Dockerfile：多阶段构建，优化体积与启动速度
   - Dockerfile.single：单容器打包，内置 SurrealDB
-- 依赖注入与配置
+  - **Dockerfile.living：活体知识系统专用镜像**
+- **依赖注入与配置**
   - 环境变量驱动数据库连接、API URL、超时与并发
   - .env.example 提供最小可用配置模板
 
@@ -301,53 +519,68 @@ P["pyproject.toml<br/>Python 依赖"] --> IMG["Dockerfile<br/>多阶段构建"]
 N["Node.js 20.x<br/>前端构建"] --> IMG
 IMG --> RUNTIME["运行时镜像<br/>Supervisor 管理"]
 RUNTIME --> SVC["服务进程<br/>API/Worker/Frontend"]
+PL["PostgreSQL + TimescaleDB"] --> LIVING["活体知识系统"]
+LIVING --> LIVING_IMG["Dockerfile.living<br/>专用镜像"]
 ```
 
-图表来源
+**图表来源**
 - [pyproject.toml](file://pyproject.toml#L14-L42)
 - [Dockerfile](file://Dockerfile#L1-L114)
 - [Dockerfile.single](file://Dockerfile.single#L1-L81)
+- [Dockerfile.living](file://Dockerfile.living#L1-L70)
 - [supervisord.conf](file://supervisord.conf#L1-L41)
 - [supervisord.single.conf](file://supervisord.single.conf#L1-L52)
 
-章节来源
+**章节来源**
 - [pyproject.toml](file://pyproject.toml#L1-L99)
 - [Dockerfile](file://Dockerfile#L1-L114)
 - [Dockerfile.single](file://Dockerfile.single#L1-L81)
+- [Dockerfile.living](file://Dockerfile.living#L1-L70)
 
 ## 性能考虑
-- 并发与冲突
+- **并发与冲突**
   - SURREAL_COMMANDS_MAX_TASKS：根据 CPU 核心数调整（默认 5）
   - 建议高并发场景使用指数抖动重试策略（exponential_jitter）
-- 超时设置
+- **超时设置**
   - API_CLIENT_TIMEOUT 应大于 Esperanto LLM 超时并留缓冲
-- 批处理与吞吐
+- **批量处理与吞吐**
   - TTS_BATCH_SIZE：根据提供商并发能力调整（OpenAI 较高，ElevenLabs 较低）
-- 端口与网络
+- **端口与网络**
   - 如需修改端口，同步更新 API_URL 以避免自动检测偏差
-- 资源限制
+- **资源限制**
   - 在容器编排中设置内存与 CPU 上限，防止资源争用
+- **活体知识系统性能**
+  - PostgreSQL 连接池配置
+  - TimescaleDB 分区策略
+  - 数据库索引优化
+  - API 限流与缓存策略
 
-章节来源
+**章节来源**
 - [docs/5-CONFIGURATION/advanced.md](file://docs/5-CONFIGURATION/advanced.md#L7-L57)
 - [docs/5-CONFIGURATION/advanced.md](file://docs/5-CONFIGURATION/advanced.md#L119-L173)
 
 ## 故障排查指南
-- “无法连接到 API”
+- **"无法连接到 API"**
   - 检查 Docker 与服务状态、日志
   - 首次启动可能较慢，等待 20-30 秒
-- 端口占用
+- **端口占用**
   - 修改 docker-compose 端口映射或更换宿主端口
-- 数据库连接失败
+- **数据库连接失败**
   - 检查 SurrealDB 日志；Linux 下注意 bind mount 权限（user: root）
-- 反向代理问题
+  - **活体知识系统**：检查 PostgreSQL 服务状态和连接参数
+- **反向代理问题**
   - 混合内容（HTTP/HTTPS 不一致）、WebSocket 升级头缺失、超时过短
   - 文件上传 413：增大反代 body 限制并配置错误响应 CORS
-- 凭据与密码
+- **凭据与密码**
   - 未设置 OPEN_NOTEBOOK_ENCRYPTION_KEY 将导致凭据无法保存
   - OPEN_NOTEBOOK_PASSWORD 需正确传递至请求头（Bearer）
+- **活体知识系统故障**
+  - 检查数据库连接字符串和凭据
+  - 验证 TimescaleDB 扩展是否正确安装
+  - 查看 API 服务健康检查状态
+  - 检查日志卷中的错误信息
 
-章节来源
+**章节来源**
 - [docs/1-INSTALLATION/docker-compose.md](file://docs/1-INSTALLATION/docker-compose.md#L238-L321)
 - [docs/5-CONFIGURATION/reverse-proxy.md](file://docs/5-CONFIGURATION/reverse-proxy.md#L502-L794)
 - [docs/5-CONFIGURATION/security.md](file://docs/5-CONFIGURATION/security.md#L330-L378)
@@ -356,24 +589,31 @@ RUNTIME --> SVC["服务进程<br/>API/Worker/Frontend"]
 - 对大多数用户，优先选择 Docker Compose 多容器部署，获得清晰的服务边界与更强的可维护性
 - 对受限平台或轻量部署，单容器方案可快速上线
 - 开发者建议从源码部署，便于调试与贡献
+- **新增：活体知识系统提供独立的知识管理解决方案，适用于复杂的自动化知识处理场景**
+- **活体知识系统采用生物启发式架构，具有自组织、自愈合、可扩展等特性**
 - 生产环境务必启用 HTTPS、密码保护、严格的防火墙与定期备份
 - 通过合理的环境变量与反向代理配置，实现稳定的域名访问与长耗时任务处理
 
 ## 附录
-- 快速决策表
+- **快速决策表**
   - Docker Compose：推荐，功能完整、易扩展
   - 单容器：平台限制或共享主机
   - 从源码：开发与贡献
-- 常用命令速查
+  - **活体知识系统**：独立部署，专门的知识管理
+- **常用命令速查**
   - docker compose up/down/logs/restart/pull
   - make start-all/api/database（源码）
-- 参考文档
+  - **活体知识系统**：./scripts/start_living.sh dev/prod/stop/logs/reset
+- **参考文档**
   - 完整环境变量清单与分组
   - 反向代理与 HTTPS 配置
   - 安全与性能调优
+  - **活体知识系统架构与实现指南**
 
-章节来源
+**章节来源**
 - [docs/1-INSTALLATION/index.md](file://docs/1-INSTALLATION/index.md#L1-L154)
 - [docs/5-CONFIGURATION/environment-reference.md](file://docs/5-CONFIGURATION/environment-reference.md#L133-L230)
 - [docs/5-CONFIGURATION/reverse-proxy.md](file://docs/5-CONFIGURATION/reverse-proxy.md#L1-L200)
 - [docs/5-CONFIGURATION/advanced.md](file://docs/5-CONFIGURATION/advanced.md#L480-L545)
+- [docs/living_system_architecture.md](file://docs/living_system_architecture.md#L1-L264)
+- [docs/living_system_implementation_summary.md](file://docs/living_system_implementation_summary.md#L1-L154)
