--- a/.qoder/repowiki/zh/content/扩展与定制/扩展与定制.md
+++ b/.qoder/repowiki/zh/content/扩展与定制/扩展与定制.md
@@ -5,8 +5,15 @@
 - [README.md](file://README.md)
 - [api/main.py](file://api/main.py)
 - [api/command_service.py](file://api/command_service.py)
+- [api/routers/activity.py](file://api/routers/activity.py)
 - [commands/__init__.py](file://commands/__init__.py)
 - [commands/example_commands.py](file://commands/example_commands.py)
+- [extensions/screen-monitor/README.md](file://extensions/screen-monitor/README.md)
+- [extensions/screen-monitor/manifest.json](file://extensions/screen-monitor/manifest.json)
+- [extensions/screen-monitor/background/background.js](file://extensions/screen-monitor/background/background.js)
+- [extensions/screen-monitor/content/tracker.js](file://extensions/screen-monitor/content/tracker.js)
+- [extensions/screen-monitor/popup/dashboard.html](file://extensions/screen-monitor/popup/dashboard.html)
+- [extensions/screen-monitor/popup/dashboard.js](file://extensions/screen-monitor/popup/dashboard.js)
 - [frontend/src/lib/config.ts](file://frontend/src/lib/config.ts)
 - [frontend/src/lib/i18n.ts](file://frontend/src/lib/i18n.ts)
 - [frontend/src/lib/theme-script.ts](file://frontend/src/lib/theme-script.ts)
@@ -17,17 +24,27 @@
 - [api/models.py](file://api/models.py)
 </cite>
 
+## 更新摘要
+**所做更改**
+- 新增 OPC 活动监控浏览器扩展开发指南章节
+- 添加浏览器扩展与 OPC 系统集成的技术架构说明
+- 增加扩展安装、配置和使用指南
+- 新增内容脚本、后台脚本和弹窗面板的详细说明
+- 添加 OPC 活动监控 API 端点说明
+- 更新扩展开发最佳实践和安全考虑
+
 ## 目录
 1. [简介](#简介)
 2. [项目结构](#项目结构)
 3. [核心组件](#核心组件)
 4. [架构总览](#架构总览)
 5. [详细组件分析](#详细组件分析)
-6. [依赖关系分析](#依赖关系分析)
-7. [性能考虑](#性能考虑)
-8. [故障排查指南](#故障排查指南)
-9. [结论](#结论)
-10. [附录](#附录)
+6. [OPC 活动监控浏览器扩展](#opc-活动监控浏览器扩展)
+7. [依赖关系分析](#依赖关系分析)
+8. [性能考虑](#性能考虑)
+9. [故障排查指南](#故障排查指南)
+10. [结论](#结论)
+11. [附录](#附录)
 
 ## 简介
 本指南面向希望对 Open Notebook 进行扩展与定制的开发者，覆盖以下主题：
@@ -36,6 +53,7 @@
 - UI 组件与主题定制：前端运行时配置、主题切换脚本与国际化扩展
 - 内容转换模板（Prompt）：Jinja 模板的创建与修改方法
 - API 扩展与第三方集成：FastAPI 路由扩展、中间件与 CORS 配置
+- **新增** OPC 活动监控浏览器扩展：屏幕感知 MVP，理解超级个体的数字行为模式
 - 性能优化与安全加固：数据库连接、加密密钥、异常处理与部署建议
 
 ## 项目结构
@@ -44,6 +62,7 @@ Open Notebook 采用前后端分离架构：
 - 前端基于 Next.js/React，使用 i18n 和主题系统
 - 命令系统基于 surreal-commands，支持后台作业提交与状态查询
 - AI 模型管理通过 esperanto 的 AIFactory 动态加载与缓存
+- **新增** 浏览器扩展支持：OPC 活动监控扩展提供屏幕感知功能
 
 ```mermaid
 graph TB
@@ -55,9 +74,16 @@ end
 subgraph "后端"
 API_Main["API 应用入口<br/>api/main.py"]
 API_CommandSvc["命令服务<br/>api/command_service.py"]
+API_Activity["活动监控API<br/>api/routers/activity.py"]
 DB_Repo["数据库仓库<br/>open_notebook/database/repository.py"]
 AI_Models["AI 模型管理<br/>open_notebook/ai/models.py"]
 CFG_Core["核心配置<br/>open_notebook/config.py"]
+end
+subgraph "浏览器扩展"
+EXT_Monitor["OPC 活动监控扩展<br/>extensions/screen-monitor"]
+EXT_Background["后台脚本<br/>background.js"]
+EXT_Content["内容脚本<br/>tracker.js"]
+EXT_Popup["弹窗面板<br/>dashboard.html/js"]
 end
 FE_Config --> API_Main
 FE_Theme --> FE_Config
@@ -65,20 +91,18 @@ FE_I18n --> FE_Config
 API_Main --> DB_Repo
 API_Main --> AI_Models
 API_CommandSvc --> API_Main
-CFG_Core --> API_Main
+API_Activity --> API_Main
+EXT_Monitor --> EXT_Background
+EXT_Monitor --> EXT_Content
+EXT_Monitor --> EXT_Popup
 ```
 
-图表来源
-- [api/main.py](file://api/main.py#L99-L190)
-- [api/command_service.py](file://api/command_service.py#L1-L93)
-- [frontend/src/lib/config.ts](file://frontend/src/lib/config.ts#L1-L149)
-- [frontend/src/lib/theme-script.ts](file://frontend/src/lib/theme-script.ts#L1-L18)
-- [frontend/src/lib/i18n.ts](file://frontend/src/lib/i18n.ts#L1-L25)
-- [open_notebook/ai/models.py](file://open_notebook/ai/models.py#L97-L267)
-- [open_notebook/database/repository.py](file://open_notebook/database/repository.py#L47-L83)
-- [open_notebook/config.py](file://open_notebook/config.py#L1-L18)
+**图表来源**
+- [api/main.py](file://api/main.py#L264-L264)
+- [api/routers/activity.py](file://api/routers/activity.py#L1-L170)
+- [extensions/screen-monitor/README.md](file://extensions/screen-monitor/README.md#L35-L50)
 
-章节来源
+**章节来源**
 - [README.md](file://README.md#L1-L358)
 - [api/main.py](file://api/main.py#L99-L190)
 
@@ -88,8 +112,9 @@ CFG_Core --> API_Main
 - 数据库访问：封装 SurrealDB 连接、查询、插入、更新、删除与关系建立
 - 前端配置与运行时：优先从后端 /api/config 获取运行时配置，回退到环境变量与相对路径重写
 - 国际化与主题：i18n 初始化与语言检测、主题脚本避免闪烁
+- **新增** OPC 活动监控扩展：浏览器扩展提供屏幕活动追踪、隐私优先的数据存储和 OPC 系统集成
 
-章节来源
+**章节来源**
 - [commands/__init__.py](file://commands/__init__.py#L1-L25)
 - [commands/example_commands.py](file://commands/example_commands.py#L1-L143)
 - [api/command_service.py](file://api/command_service.py#L1-L93)
@@ -100,7 +125,7 @@ CFG_Core --> API_Main
 - [frontend/src/lib/theme-script.ts](file://frontend/src/lib/theme-script.ts#L1-L18)
 
 ## 架构总览
-下图展示命令执行与模型加载的关键流程。
+下图展示命令执行与模型加载的关键流程，以及 OPC 活动监控扩展的集成架构。
 
 ```mermaid
 sequenceDiagram
@@ -109,6 +134,8 @@ participant API as "后端 API"
 participant CMD as "命令服务"
 participant REG as "命令注册表"
 participant DB as "数据库"
+participant EXT as "OPC 活动监控扩展"
+participant OPC as "OPC 系统"
 FE->>API : "提交命令请求"
 API->>CMD : "submit_command_job(app, name, args)"
 CMD->>REG : "校验并提交命令"
@@ -121,12 +148,18 @@ CMD->>REG : "查询状态"
 REG-->>CMD : "状态/结果"
 CMD-->>API : "状态对象"
 API-->>FE : "状态/结果"
+Note over EXT,OPC : OPC 活动监控扩展集成流程
+EXT->>EXT : "后台脚本监听标签切换"
+EXT->>EXT : "内容脚本检测页面类型"
+EXT->>OPC : "每分钟同步活动数据"
+OPC-->>EXT : "健康检查响应"
 ```
 
-图表来源
+**图表来源**
 - [api/command_service.py](file://api/command_service.py#L10-L93)
 - [commands/__init__.py](file://commands/__init__.py#L1-L25)
 - [commands/example_commands.py](file://commands/example_commands.py#L44-L92)
+- [extensions/screen-monitor/background/background.js](file://extensions/screen-monitor/background/background.js#L266-L287)
 
 ## 详细组件分析
 
@@ -148,11 +181,11 @@ Done --> |是| Return["返回结果"]
 Done --> |否| Poll
 ```
 
-图表来源
+**图表来源**
 - [api/command_service.py](file://api/command_service.py#L10-L93)
 - [commands/example_commands.py](file://commands/example_commands.py#L44-L143)
 
-章节来源
+**章节来源**
 - [commands/__init__.py](file://commands/__init__.py#L1-L25)
 - [commands/example_commands.py](file://commands/example_commands.py#L1-L143)
 - [api/command_service.py](file://api/command_service.py#L1-L93)
@@ -196,10 +229,10 @@ ModelManager --> Model : "读取"
 ModelManager --> DefaultModels : "读取默认"
 ```
 
-图表来源
+**图表来源**
 - [open_notebook/ai/models.py](file://open_notebook/ai/models.py#L18-L267)
 
-章节来源
+**章节来源**
 - [open_notebook/ai/models.py](file://open_notebook/ai/models.py#L97-L267)
 
 ### UI 组件定制与前端运行时配置
@@ -221,12 +254,12 @@ G --> I
 H --> I
 ```
 
-图表来源
+**图表来源**
 - [frontend/src/lib/config.ts](file://frontend/src/lib/config.ts#L59-L140)
 - [frontend/src/lib/theme-script.ts](file://frontend/src/lib/theme-script.ts#L1-L18)
 - [frontend/src/lib/i18n.ts](file://frontend/src/lib/i18n.ts#L1-L25)
 
-章节来源
+**章节来源**
 - [frontend/src/lib/config.ts](file://frontend/src/lib/config.ts#L1-L149)
 - [frontend/src/lib/theme-script.ts](file://frontend/src/lib/theme-script.ts#L1-L18)
 - [frontend/src/lib/i18n.ts](file://frontend/src/lib/i18n.ts#L1-L25)
@@ -236,7 +269,7 @@ H --> I
 - 示例：问答流程模板展示了系统角色、步骤与输出格式约定
 - 修改建议：保持输出格式约束（如 JSON），确保与解析逻辑一致
 
-章节来源
+**章节来源**
 - [prompts/ask/entry.jinja](file://prompts/ask/entry.jinja#L1-L46)
 
 ### API 扩展与第三方集成最佳实践
@@ -245,14 +278,149 @@ H --> I
 - 异常处理：自定义 HTTP 异常处理器保证错误响应包含 CORS 头
 - 数据库迁移：启动时自动执行迁移，失败则快速退出
 
-章节来源
+**章节来源**
 - [api/main.py](file://api/main.py#L157-L190)
+
+## OPC 活动监控浏览器扩展
+
+### 扩展概述
+OPC 活动监控浏览器扩展是 Open Notebook 生态系统的重要组成部分，提供屏幕感知功能，帮助超级个体理解自己的数字行为模式。
+
+**功能特性**：
+- 实时活动追踪：自动记录浏览器标签切换和停留时间
+- 隐私优先：所有数据本地存储，不上传云端
+- 行为洞察：AI 分析工作模式，提供效率建议
+- OPC 集成：可选同步到本地 OPC 系统
+
+### 技术架构
+扩展采用 MV3 架构，包含三个核心组件：
+
+```mermaid
+graph TB
+subgraph "浏览器扩展架构"
+BG["后台脚本<br/>Service Worker"]
+CS["内容脚本"]
+POP["弹窗仪表板"]
+end
+subgraph "数据流"
+TAB["标签切换事件"] --> BG
+URL["URL 变更事件"] --> BG
+WIN["窗口焦点事件"] --> BG
+BG --> STORAGE["Chrome 本地存储"]
+BG --> API["OPC API 同步"]
+STORAGE --> POP
+API --> POP
+END
+subgraph "OPC 后端集成"
+API --> ACT["/api/v1/activity/log"]
+ACT --> DB["SurrealDB 存储"]
+END
+```
+
+**图表来源**
+- [extensions/screen-monitor/README.md](file://extensions/screen-monitor/README.md#L35-L50)
+- [extensions/screen-monitor/manifest.json](file://extensions/screen-monitor/manifest.json#L16-L33)
+
+### 安装与配置
+**开发模式安装**：
+1. 打开 Chrome/Edge，进入 `chrome://extensions/`
+2. 开启"开发者模式"
+3. 点击"加载已解压的扩展程序"
+4. 选择 `extensions/screen-monitor` 文件夹
+
+**权限配置**：
+- `activeTab`：访问当前标签页信息
+- `tabs`：监听标签切换事件
+- `storage`：本地数据存储
+- `alarms`：定时同步任务
+
+**主机权限**：
+- `http://localhost:*/`
+- `https://localhost:*/`
+
+### 核心组件详解
+
+#### 后台脚本（Background Script）
+负责监听浏览器事件和管理活动追踪：
+
+**主要功能**：
+- 监听标签激活和更新事件
+- 窗口焦点变化处理
+- 活动数据本地存储
+- OPC 系统定时同步
+
+**关键实现**：
+- 使用 `chrome.alarms` 每分钟触发同步
+- 7天自动清理旧数据
+- 活动分类映射（设计、写作、研究等）
+
+#### 内容脚本（Content Script）
+在页面中运行，检测内容类型和用户参与度：
+
+**内容类型检测**：
+- 视频平台识别（YouTube、B站等）
+- 文档/阅读内容检测
+- 社交媒体内容识别
+- 代码仓库内容识别
+- 文章/写作内容检测
+
+**参与度指标**：
+- 滚动深度跟踪
+- 复制事件检测
+- 选择事件统计
+- 页面加载报告
+
+#### 弹窗仪表板（Popup Dashboard）
+提供可视化界面展示活动数据：
+
+**界面组件**：
+- 当前活动显示
+- 今日概览统计
+- 时间分布图表
+- 常用网站列表
+- AI 洞察建议
+
+**数据可视化**：
+- 颜色编码的活动分类
+- 进度条显示时间分配
+- 交互式统计卡片
+- 实时状态指示
+
+### OPC 系统集成
+扩展支持与本地 OPC 系统的可选集成：
+
+**API 端点**：
+- POST `/api/v1/activity/log`：接收活动数据
+- GET `/api/v1/activity/today`：获取今日活动
+- GET `/api/v1/activity/history`：获取历史数据
+- GET `/api/v1/activity/insights`：获取洞察建议
+
+**数据格式**：
+- 活动记录包含 URL、标题、域名、时间段、分类等
+- 日常汇总包含总时长、分类时间、域名时间、活动计数
+- 支持增量同步，每次发送最近的活动记录
+
+### 隐私与安全
+- 数据完全本地存储，不上传云端
+- 7天后自动清理旧数据
+- 可选同步到本地 OPC 系统（localhost:5055）
+- 支持随时停用或卸载
+
+**章节来源**
+- [extensions/screen-monitor/README.md](file://extensions/screen-monitor/README.md#L1-L72)
+- [extensions/screen-monitor/manifest.json](file://extensions/screen-monitor/manifest.json#L1-L39)
+- [extensions/screen-monitor/background/background.js](file://extensions/screen-monitor/background/background.js#L1-L294)
+- [extensions/screen-monitor/content/tracker.js](file://extensions/screen-monitor/content/tracker.js#L1-L154)
+- [extensions/screen-monitor/popup/dashboard.html](file://extensions/screen-monitor/popup/dashboard.html#L1-L381)
+- [extensions/screen-monitor/popup/dashboard.js](file://extensions/screen-monitor/popup/dashboard.js#L1-L304)
+- [api/routers/activity.py](file://api/routers/activity.py#L1-L170)
 
 ## 依赖关系分析
 - 命令系统依赖 surreal-commands 注册表与后端导入
 - AI 模型管理依赖 esperanto 工厂与凭据提供器
 - 前端配置依赖后端 /api/config 与 Next.js 重写
 - 数据库访问封装了 SurrealDB 连接与查询
+- **新增** OPC 活动监控扩展依赖 Chrome Extension API 和本地存储
 
 ```mermaid
 graph LR
@@ -265,14 +433,19 @@ AI --> ESP["esperanto 工厂"]
 FE["前端"] --> API
 FE --> CFG["前端配置"]
 CFG --> API
+EXT["OPC 活动监控扩展"] --> CHROME["Chrome Extension API"]
+EXT --> LOCAL["Chrome 本地存储"]
+EXT --> OPC["OPC 系统"]
+OPC --> API
 ```
 
-图表来源
+**图表来源**
 - [api/command_service.py](file://api/command_service.py#L1-L93)
 - [open_notebook/ai/models.py](file://open_notebook/ai/models.py#L97-L267)
 - [frontend/src/lib/config.ts](file://frontend/src/lib/config.ts#L1-L149)
+- [extensions/screen-monitor/background/background.js](file://extensions/screen-monitor/background/background.js#L65-L76)
 
-章节来源
+**章节来源**
 - [api/command_service.py](file://api/command_service.py#L1-L93)
 - [open_notebook/ai/models.py](file://open_notebook/ai/models.py#L97-L267)
 - [frontend/src/lib/config.ts](file://frontend/src/lib/config.ts#L1-L149)
@@ -282,6 +455,7 @@ CFG --> API
 - 模型缓存：Esperanto 工厂会缓存模型实例，减少重复初始化开销
 - 数据库连接：统一连接管理与上下文关闭，避免连接泄漏
 - 前端重写：使用相对路径重写避免跨域与端口映射问题，降低网络往返
+- **新增** 扩展性能优化：后台脚本使用防抖机制，内容脚本定期清理临时数据，弹窗面板使用虚拟滚动
 
 ## 故障排查指南
 - 加密密钥未配置：启动时检查 OPEN_NOTEBOOK_ENCRYPTION_KEY，未配置会导致凭据加密失败
@@ -289,8 +463,9 @@ CFG --> API
 - 数据库版本不匹配：启动时自动迁移，失败会快速退出，需检查数据库连接与权限
 - 命令提交失败：确认命令模块已导入，提交后检查作业 ID 是否为空
 - 国际化与主题：语言检测与本地存储缓存，主题脚本在水合前执行避免闪烁
+- **新增** 扩展调试：检查 Chrome 扩展后台页面控制台，验证权限配置，确认 OPC API 可访问性
 
-章节来源
+**章节来源**
 - [api/main.py](file://api/main.py#L55-L96)
 - [api/main.py](file://api/main.py#L130-L154)
 - [open_notebook/database/repository.py](file://open_notebook/database/repository.py#L47-L83)
@@ -299,7 +474,7 @@ CFG --> API
 - [frontend/src/lib/theme-script.ts](file://frontend/src/lib/theme-script.ts#L1-L18)
 
 ## 结论
-通过命令系统、AI 模型管理、前端运行时配置与数据库访问层的协同，Open Notebook 提供了清晰的扩展点。开发者可按本文档的步骤新增命令、接入新模型、定制 UI 与主题、扩展 Prompt 模板，并在 API 层进行路由与中间件扩展。同时，遵循性能与安全最佳实践可确保系统稳定与高效运行。
+通过命令系统、AI 模型管理、前端运行时配置、数据库访问层和 OPC 活动监控浏览器扩展的协同，Open Notebook 提供了完整的扩展生态。开发者可按本文档的步骤新增命令、接入新模型、定制 UI 与主题、扩展 Prompt 模板，并在 API 层进行路由与中间件扩展。OPC 活动监控扩展进一步增强了系统对用户行为的理解能力，为个人成长和效率提升提供了数据支撑。同时，遵循性能与安全最佳实践可确保系统稳定与高效运行。
 
 ## 附录
 - 快速开始与安装参考：[README.md](file://README.md#L97-L177)
@@ -309,3 +484,9 @@ CFG --> API
 - 数据库连接与查询封装：[open_notebook/database/repository.py](file://open_notebook/database/repository.py#L65-L195)
 - API 入口与中间件配置：[api/main.py](file://api/main.py#L99-L190)
 - Prompt 模板示例：[prompts/ask/entry.jinja](file://prompts/ask/entry.jinja#L1-L46)
+- **新增** OPC 活动监控扩展：[extensions/screen-monitor/README.md](file://extensions/screen-monitor/README.md#L1-L72)
+- **新增** 扩展技术规范：[extensions/screen-monitor/manifest.json](file://extensions/screen-monitor/manifest.json#L1-L39)
+- **新增** 后台脚本实现：[extensions/screen-monitor/background/background.js](file://extensions/screen-monitor/background/background.js#L1-L294)
+- **新增** 内容脚本实现：[extensions/screen-monitor/content/tracker.js](file://extensions/screen-monitor/content/tracker.js#L1-L154)
+- **新增** 弹窗面板实现：[extensions/screen-monitor/popup/dashboard.html](file://extensions/screen-monitor/popup/dashboard.html#L1-L381)
+- **新增** OPC API 端点：[api/routers/activity.py](file://api/routers/activity.py#L1-L170)
