--- a/.qoder/repowiki/zh/content/配置管理/配置管理.md
+++ b/.qoder/repowiki/zh/content/配置管理/配置管理.md
@@ -5,6 +5,11 @@
 - [.env.example](file://.env.example)
 - [CONFIGURATION.md](file://CONFIGURATION.md)
 - [open_notebook/config.py](file://open_notebook/config.py)
+- [open_notebook/ai/models.py](file://open_notebook/ai/models.py)
+- [open_notebook/ai/provision.py](file://open_notebook/ai/provision.py)
+- [open_notebook/utils/context_builder.py](file://open_notebook/utils/context_builder.py)
+- [open_notebook/graphs/chat.py](file://open_notebook/graphs/chat.py)
+- [open_notebook/graphs/source_chat.py](file://open_notebook/graphs/source_chat.py)
 - [api/settings_service.py](file://api/settings_service.py)
 - [docs/5-CONFIGURATION/environment-reference.md](file://docs/5-CONFIGURATION/environment-reference.md)
 - [docs/5-CONFIGURATION/database.md](file://docs/5-CONFIGURATION/database.md)
@@ -20,25 +25,42 @@
 - [examples/docker-compose-full-local.yml](file://examples/docker-compose-full-local.yml)
 </cite>
 
+## 更新摘要
+**所做更改**
+- 新增AI模型配置集中化管理章节，详细说明DefaultModels和ModelManager架构
+- 更新配置常量章节，新增LARGE_CONTEXT_TOKEN_THRESHOLD、DEFAULT_MAX_TOKENS和SOURCE_CHAT_MAX_TOKENS的详细说明
+- 增强AI模型选择逻辑章节，说明基于上下文大小的智能模型切换机制
+- 新增配置常量依赖关系图表，展示各模块间的配置传递关系
+- 更新AI提供商配置章节，强调凭据系统与模型配置的集成
+
 ## 目录
 1. [简介](#简介)
 2. [项目结构](#项目结构)
 3. [核心组件](#核心组件)
 4. [架构总览](#架构总览)
 5. [详细组件分析](#详细组件分析)
-6. [依赖关系分析](#依赖关系分析)
-7. [性能考虑](#性能考虑)
-8. [故障排除指南](#故障排除指南)
-9. [结论](#结论)
-10. [附录](#附录)
+6. [配置常量管理](#配置常量管理)
+7. [AI模型配置集中化管理](#ai模型配置集中化管理)
+8. [AI模型选择逻辑](#ai模型选择逻辑)
+9. [依赖关系分析](#依赖关系分析)
+10. [性能考虑](#性能考虑)
+11. [故障排除指南](#故障排除指南)
+12. [结论](#结论)
+13. [附录](#附录)
 
 ## 简介
 本指南面向Open Notebook的配置管理，系统性梳理所有可配置的环境变量与参数设置，覆盖数据库、安全、AI提供商、本地语音（TTS/STT）、MCP集成等主题，并提供模板、最佳实践、依赖关系说明、生产安全加固、性能优化与验证/排障方法。文档同时给出不同部署场景的差异与注意事项，帮助从开发到生产的全生命周期稳定运行。
+
+**更新** 本次更新重点反映了配置管理的重大改进：新增LARGE_CONTEXT_TOKEN_THRESHOLD、DEFAULT_MAX_TOKENS和SOURCE_CHAT_MAX_TOKENS等配置常量，以及AI模型配置的集中化管理架构。
 
 ## 项目结构
 Open Notebook的配置主要分布在以下位置：
 - 环境变量示例与文档：根目录的.env.example与docs/5-CONFIGURATION/
 - 应用内默认路径配置：open_notebook/config.py
+- AI模型配置：open_notebook/ai/models.py
+- 模型选择逻辑：open_notebook/ai/provision.py
+- 上下文构建器：open_notebook/utils/context_builder.py
+- 图谱执行器：open_notebook/graphs/chat.py、open_notebook/graphs/source_chat.py
 - 设置服务层：api/settings_service.py
 - 示例编排：examples/docker-compose-full-local.yml
 
@@ -50,12 +72,22 @@ DOCS["docs/5-CONFIGURATION/*.md<br/>官方配置文档"]
 EXAMPLES["examples/docker-compose-full-local.yml<br/>完整本地部署示例"]
 end
 subgraph "应用配置"
-CFG["open_notebook/config.py<br/>数据/上传/缓存目录"]
+CFG["open_notebook/config.py<br/>配置常量与路径"]
+MODELS["open_notebook/ai/models.py<br/>模型配置管理"]
+PROVISION["open_notebook/ai/provision.py<br/>模型选择逻辑"]
+CONTEXT["open_notebook/utils/context_builder.py<br/>上下文构建"]
+CHAT["open_notebook/graphs/chat.py<br/>对话图谱"]
+SOURCECHAT["open_notebook/graphs/source_chat.py<br/>源对话图谱"]
 SVC["api/settings_service.py<br/>设置服务层"]
 end
 ENV --> DOCS
 DOCS --> CFG
 EXAMPLES --> CFG
+CFG --> MODELS
+MODELS --> PROVISION
+PROVISION --> CHAT
+PROVISION --> SOURCECHAT
+CONTEXT --> SOURCECHAT
 ENV --> SVC
 DOCS --> SVC
 ```
@@ -63,26 +95,45 @@ DOCS --> SVC
 **图表来源**
 - [.env.example](file://.env.example#L1-L60)
 - [docs/5-CONFIGURATION/environment-reference.md](file://docs/5-CONFIGURATION/environment-reference.md#L1-L275)
-- [open_notebook/config.py](file://open_notebook/config.py#L1-L18)
+- [open_notebook/config.py](file://open_notebook/config.py#L1-L26)
+- [open_notebook/ai/models.py](file://open_notebook/ai/models.py#L61-L95)
+- [open_notebook/ai/provision.py](file://open_notebook/ai/provision.py#L1-L62)
+- [open_notebook/utils/context_builder.py](file://open_notebook/utils/context_builder.py#L1-L200)
+- [open_notebook/graphs/chat.py](file://open_notebook/graphs/chat.py#L1-L67)
+- [open_notebook/graphs/source_chat.py](file://open_notebook/graphs/source_chat.py#L1-L196)
 - [api/settings_service.py](file://api/settings_service.py#L1-L80)
 - [examples/docker-compose-full-local.yml](file://examples/docker-compose-full-local.yml#L1-L198)
 
 **章节来源**
 - [.env.example](file://.env.example#L1-L60)
 - [CONFIGURATION.md](file://CONFIGURATION.md#L1-L37)
-- [open_notebook/config.py](file://open_notebook/config.py#L1-L18)
+- [open_notebook/config.py](file://open_notebook/config.py#L1-L26)
+- [open_notebook/ai/models.py](file://open_notebook/ai/models.py#L1-L267)
+- [open_notebook/ai/provision.py](file://open_notebook/ai/provision.py#L1-L62)
+- [open_notebook/utils/context_builder.py](file://open_notebook/utils/context_builder.py#L1-L496)
+- [open_notebook/graphs/chat.py](file://open_notebook/graphs/chat.py#L1-L67)
+- [open_notebook/graphs/source_chat.py](file://open_notebook/graphs/source_chat.py#L1-L196)
 - [api/settings_service.py](file://api/settings_service.py#L1-L80)
 - [examples/docker-compose-full-local.yml](file://examples/docker-compose-full-local.yml#L1-L198)
 
 ## 核心组件
 - 环境变量体系：集中于docs/5-CONFIGURATION/environment-reference.md，涵盖API、数据库、超时、TTS批处理、内容抽取、网络代理、调试监控等。
-- 数据存储路径：open_notebook/config.py定义数据目录、上传目录、检查点与缓存目录。
+- 配置常量管理：open_notebook/config.py定义AI模型相关的核心配置常量，包括上下文阈值和默认令牌限制。
+- AI模型配置：open_notebook/ai/models.py提供集中化的模型配置管理，支持凭据系统与默认模型配置。
+- 模型选择逻辑：open_notebook/ai/provision.py实现基于上下文大小的智能模型切换机制。
+- 上下文构建：open_notebook/utils/context_builder.py提供灵活的上下文构建和截断功能。
+- 图谱执行：open_notebook/graphs/chat.py和open_notebook/graphs/source_chat.py使用配置常量进行令牌限制。
 - 设置服务层：api/settings_service.py封装前端对设置的读取与更新，对接后端API。
 - 文档化配置：CONFIGURATION.md指引至各专题文档，便于按主题检索。
 
 **章节来源**
 - [docs/5-CONFIGURATION/environment-reference.md](file://docs/5-CONFIGURATION/environment-reference.md#L1-L275)
-- [open_notebook/config.py](file://open_notebook/config.py#L1-L18)
+- [open_notebook/config.py](file://open_notebook/config.py#L1-L26)
+- [open_notebook/ai/models.py](file://open_notebook/ai/models.py#L1-L267)
+- [open_notebook/ai/provision.py](file://open_notebook/ai/provision.py#L1-L62)
+- [open_notebook/utils/context_builder.py](file://open_notebook/utils/context_builder.py#L1-L496)
+- [open_notebook/graphs/chat.py](file://open_notebook/graphs/chat.py#L1-L67)
+- [open_notebook/graphs/source_chat.py](file://open_notebook/graphs/source_chat.py#L1-L196)
 - [api/settings_service.py](file://api/settings_service.py#L1-L80)
 - [CONFIGURATION.md](file://CONFIGURATION.md#L1-L37)
 
@@ -100,14 +151,23 @@ subgraph "Open Notebook"
 FRONT["Next.js 前端(8502)"]
 API["FastAPI 后端(5055)"]
 DB["SurrealDB(8000)"]
-CFG["环境变量/设置服务"]
+CFG["环境变量/配置常量"]
+MODELS["AI模型配置管理"]
+PROVISION["模型选择逻辑"]
+CONTEXT["上下文构建器"]
+CHAT["对话图谱执行器"]
+SOURCECHAT["源对话图谱执行器"]
 end
 UI --> PROXY
 PROXY --> FRONT
 FRONT --> API
 API --> DB
 CFG --> API
-CFG --> FRONT
+CFG --> MODELS
+MODELS --> PROVISION
+PROVISION --> CHAT
+PROVISION --> SOURCECHAT
+CONTEXT --> SOURCECHAT
 API --> PROVIDERS
 ```
 
@@ -115,6 +175,12 @@ API --> PROVIDERS
 - [docs/5-CONFIGURATION/reverse-proxy.md](file://docs/5-CONFIGURATION/reverse-proxy.md#L1-L800)
 - [docs/5-CONFIGURATION/database.md](file://docs/5-CONFIGURATION/database.md#L1-L51)
 - [docs/5-CONFIGURATION/environment-reference.md](file://docs/5-CONFIGURATION/environment-reference.md#L1-L275)
+- [open_notebook/config.py](file://open_notebook/config.py#L19-L26)
+- [open_notebook/ai/models.py](file://open_notebook/ai/models.py#L61-L95)
+- [open_notebook/ai/provision.py](file://open_notebook/ai/provision.py#L10-L62)
+- [open_notebook/utils/context_builder.py](file://open_notebook/utils/context_builder.py#L320-L350)
+- [open_notebook/graphs/chat.py](file://open_notebook/graphs/chat.py#L35-L40)
+- [open_notebook/graphs/source_chat.py](file://open_notebook/graphs/source_chat.py#L50-L55)
 
 ## 详细组件分析
 
@@ -172,10 +238,11 @@ G --> H(["完成"])
 - [docs/5-CONFIGURATION/environment-reference.md](file://docs/5-CONFIGURATION/environment-reference.md#L7-L20)
 
 ### AI提供商配置
-- 新版采用“凭据系统”：通过Settings → API Keys添加与测试连接，再发现与注册模型。
+- 新版采用"凭据系统"：通过Settings → API Keys添加与测试连接，再发现与注册模型。
 - 支持云提供商（OpenAI、Anthropic、Google、Groq、OpenRouter等）与本地（Ollama、LM Studio、OpenAI兼容）。
 - 兼容性：OpenAI兼容服务器（如LM Studio、vLLM、Text Generation WebUI、Speaches）统一走OpenAI-Compatible凭据。
-- 迁移：旧版环境变量已弃用，可通过“迁移至数据库”按钮导入。
+- 迁移：旧版环境变量已弃用，可通过"迁移至数据库"按钮导入。
+- 集中化管理：新的AI模型配置通过DefaultModels和ModelManager实现统一管理。
 
 ```mermaid
 sequenceDiagram
@@ -294,15 +361,199 @@ D --> F["AI提供商/本地模型"]
 - [docs/5-CONFIGURATION/ollama.md](file://docs/5-CONFIGURATION/ollama.md#L1-L741)
 - [docs/5-CONFIGURATION/environment-reference.md](file://docs/5-CONFIGURATION/environment-reference.md#L54-L61)
 
+## 配置常量管理
+
+### 核心配置常量
+Open Notebook引入了三个关键的配置常量来管理AI模型的行为：
+
+#### LARGE_CONTEXT_TOKEN_THRESHOLD
+- **默认值**：105,000 令牌
+- **用途**：定义切换到大型上下文模型的令牌阈值
+- **触发条件**：当内容令牌数超过此阈值时，系统自动选择大型上下文模型
+- **应用场景**：长文档分析、复杂查询、多轮对话等需要更大上下文的场景
+
+#### DEFAULT_MAX_TOKENS
+- **默认值**：8,192 令牌
+- **用途**：定义一般对话操作的最大令牌数限制
+- **应用场景**：标准聊天对话、内容生成、文本处理等常规AI交互
+- **性能考虑**：平衡响应速度与内容完整性
+
+#### SOURCE_CHAT_MAX_TOKENS
+- **默认值**：50,000 令牌
+- **用途**：定义源对话操作的最大令牌数限制
+- **应用场景**：针对特定源内容的深入对话和分析
+- **设计考量**：比DEFAULT_MAX_TOKENS更大，因为源对话通常需要更多上下文
+
+```mermaid
+flowchart TD
+A["输入内容"] --> B{"计算令牌数"}
+B --> C{"令牌数 > LARGE_CONTEXT_TOKEN_THRESHOLD?"}
+C --> |是| D["使用大型上下文模型"]
+C --> |否| E{"是否指定模型ID?"}
+E --> |是| F["使用指定模型"]
+E --> |否| G["使用默认模型"]
+D --> H["返回模型"]
+F --> H
+G --> H
+```
+
+**图表来源**
+- [open_notebook/config.py](file://open_notebook/config.py#L20-L25)
+- [open_notebook/ai/provision.py](file://open_notebook/ai/provision.py#L23-L34)
+
+**章节来源**
+- [open_notebook/config.py](file://open_notebook/config.py#L19-L26)
+- [open_notebook/ai/provision.py](file://open_notebook/ai/provision.py#L10-L62)
+
+## AI模型配置集中化管理
+
+### DefaultModels架构
+新的AI模型配置系统通过DefaultModels类实现了集中化管理：
+
+#### 默认模型类型
+- **default_chat_model**：默认聊天模型
+- **default_transformation_model**：默认转换模型
+- **large_context_model**：大型上下文模型
+- **default_text_to_speech_model**：默认文本转语音模型
+- **default_speech_to_text_model**：默认语音转文本模型
+- **default_embedding_model**：默认嵌入模型
+- **default_tools_model**：默认工具模型
+
+#### 数据库持久化
+- 使用SurrealDB存储默认模型配置
+- 每次获取时都从数据库重新加载，确保配置实时性
+- 支持动态更新而无需重启服务
+
+```mermaid
+classDiagram
+class DefaultModels {
++string record_id
++string default_chat_model
++string default_transformation_model
++string large_context_model
++string default_text_to_speech_model
++string default_speech_to_text_model
++string default_embedding_model
++string default_tools_model
++get_instance() DefaultModels
+}
+class ModelManager {
++get_model(model_id, kwargs) ModelType
++get_defaults() DefaultModels
++get_speech_to_text(kwargs) SpeechToTextModel
++get_text_to_speech(kwargs) TextToSpeechModel
++get_embedding_model(kwargs) EmbeddingModel
++get_default_model(model_type, kwargs) ModelType
+}
+DefaultModels --> ModelManager : uses
+```
+
+**图表来源**
+- [open_notebook/ai/models.py](file://open_notebook/ai/models.py#L61-L95)
+- [open_notebook/ai/models.py](file://open_notebook/ai/models.py#L97-L267)
+
+**章节来源**
+- [open_notebook/ai/models.py](file://open_notebook/ai/models.py#L61-L95)
+- [open_notebook/ai/models.py](file://open_notebook/ai/models.py#L97-L267)
+
+### ModelManager功能
+ModelManager提供了完整的模型管理功能：
+
+#### 模型获取
+- 支持通过模型ID直接获取特定模型
+- 自动处理凭据关联和环境变量回退
+- 支持动态参数传递（如温度、最大令牌数等）
+
+#### 默认模型管理
+- 提供不同类型模型的默认获取方法
+- 支持large_context模型的特殊处理
+- 自动处理模型类型验证和错误处理
+
+#### 凭据集成
+- 自动从关联的凭据对象构建配置
+- 支持凭据缺失时的环境变量回退
+- 统一的配置标准化处理
+
+**章节来源**
+- [open_notebook/ai/models.py](file://open_notebook/ai/models.py#L97-L267)
+
+## AI模型选择逻辑
+
+### 智能模型切换机制
+新的模型选择逻辑实现了基于上下文大小的智能切换：
+
+#### 选择优先级
+1. **显式模型ID**：如果提供了特定模型ID，优先使用该模型
+2. **大型上下文模型**：当内容令牌数超过LARGE_CONTEXT_TOKEN_THRESHOLD时
+3. **默认模型**：使用指定类型的默认模型
+
+#### 实现细节
+- 使用token_count函数计算内容令牌数
+- 支持动态配置和运行时调整
+- 提供详细的日志记录和错误处理
+
+```mermaid
+sequenceDiagram
+participant CB as "上下文构建器"
+participant PM as "模型管理器"
+participant MM as "默认模型"
+participant LM as "语言模型"
+CB->>PM : provision_langchain_model(content, model_id, type)
+PM->>PM : token_count(content)
+PM->>MM : 检查large_context_model
+alt 内容令牌数 > 阈值
+MM-->>PM : 返回large_context_model
+else 指定模型ID
+PM-->>PM : 获取指定模型
+else 默认模型
+MM-->>PM : 返回默认模型
+end
+PM->>LM : 创建语言模型实例
+LM-->>CB : 返回可使用的模型
+```
+
+**图表来源**
+- [open_notebook/ai/provision.py](file://open_notebook/ai/provision.py#L10-L62)
+- [open_notebook/ai/models.py](file://open_notebook/ai/models.py#L177-L264)
+
+**章节来源**
+- [open_notebook/ai/provision.py](file://open_notebook/ai/provision.py#L10-L62)
+- [open_notebook/ai/models.py](file://open_notebook/ai/models.py#L177-L264)
+
+### 上下文构建与截断
+ContextBuilder提供了灵活的上下文构建和截断功能：
+
+#### 截断算法
+- 基于令牌计数的精确控制
+- 按优先级移除低优先级项目
+- 保持上下文的语义完整性
+
+#### 配置选项
+- 支持自定义优先权重
+- 可选的重复项移除
+- 灵活的项目类型组合
+
+**章节来源**
+- [open_notebook/utils/context_builder.py](file://open_notebook/utils/context_builder.py#L320-L350)
+- [open_notebook/utils/context_builder.py](file://open_notebook/utils/context_builder.py#L422-L496)
+
 ## 依赖关系分析
 - 环境变量依赖：OPEN_NOTEBOOK_ENCRYPTION_KEY为凭据系统前提；API_URL影响前端与后端交互；SURREAL_*决定数据库连接；LLM/Embedding/TTS/STT凭据决定AI能力。
-- 组件耦合：前端通过API_URL与后端通信；后端依赖数据库与AI提供商；本地语音依赖Speaches容器；反向代理影响域名与协议。
+- 配置常量依赖：LARGE_CONTEXT_TOKEN_THRESHOLD驱动模型选择逻辑；DEFAULT_MAX_TOKENS和SOURCE_CHAT_MAX_TOKENS影响不同场景的令牌限制。
+- 组件耦合：前端通过API_URL与后端通信；后端依赖数据库与AI提供商；AI模型配置通过ModelManager统一管理；上下文构建器依赖配置常量进行令牌控制。
 - 外部依赖：SurrealDB版本与特性、AI提供商API/SDK、反向代理配置、Docker网络与卷。
 
 ```mermaid
 graph LR
 ENV["环境变量"] --> FE["前端(Next.js)"]
 ENV --> BE["后端(FastAPI)"]
+CFG["配置常量"] --> MODELS["AI模型配置"]
+CFG --> CHAT["对话执行器"]
+CFG --> SOURCECHAT["源对话执行器"]
+MODELS --> PROVISION["模型选择逻辑"]
+PROVISION --> CHAT
+PROVISION --> SOURCECHAT
+CONTEXT["上下文构建器"] --> SOURCECHAT
 FE --> BE
 BE --> DB["SurrealDB"]
 BE --> LLM["AI提供商/本地模型"]
@@ -314,20 +565,31 @@ RP --> FE
 - [docs/5-CONFIGURATION/environment-reference.md](file://docs/5-CONFIGURATION/environment-reference.md#L1-L275)
 - [docs/5-CONFIGURATION/reverse-proxy.md](file://docs/5-CONFIGURATION/reverse-proxy.md#L1-L800)
 - [docs/5-CONFIGURATION/database.md](file://docs/5-CONFIGURATION/database.md#L1-L51)
+- [open_notebook/config.py](file://open_notebook/config.py#L19-L26)
+- [open_notebook/ai/models.py](file://open_notebook/ai/models.py#L61-L95)
+- [open_notebook/ai/provision.py](file://open_notebook/ai/provision.py#L10-L62)
+- [open_notebook/utils/context_builder.py](file://open_notebook/utils/context_builder.py#L320-L350)
+- [open_notebook/graphs/chat.py](file://open_notebook/graphs/chat.py#L35-L40)
+- [open_notebook/graphs/source_chat.py](file://open_notebook/graphs/source_chat.py#L50-L55)
 
 **章节来源**
 - [docs/5-CONFIGURATION/environment-reference.md](file://docs/5-CONFIGURATION/environment-reference.md#L1-L275)
 - [docs/5-CONFIGURATION/reverse-proxy.md](file://docs/5-CONFIGURATION/reverse-proxy.md#L1-L800)
 - [docs/5-CONFIGURATION/database.md](file://docs/5-CONFIGURATION/database.md#L1-L51)
+- [open_notebook/config.py](file://open_notebook/config.py#L19-L26)
+- [open_notebook/ai/models.py](file://open_notebook/ai/models.py#L61-L95)
+- [open_notebook/ai/provision.py](file://open_notebook/ai/provision.py#L10-L62)
+- [open_notebook/utils/context_builder.py](file://open_notebook/utils/context_builder.py#L320-L350)
+- [open_notebook/graphs/chat.py](file://open_notebook/graphs/chat.py#L35-L40)
+- [open_notebook/graphs/source_chat.py](file://open_notebook/graphs/source_chat.py#L50-L55)
 
 ## 性能考虑
 - 并发与冲突：提高SURREAL_COMMANDS_MAX_TASKS提升吞吐，但可能增加冲突；配合指数抖动重试策略。
 - 超时与缓冲：API_CLIENT_TIMEOUT > LLM超时 + 缓冲，避免早退。
 - 批量与并发：TTS_BATCH_SIZE按提供商并发能力与稳定性调整。
+- **配置常量优化**：合理设置LARGE_CONTEXT_TOKEN_THRESHOLD以平衡性能和功能需求；DEFAULT_MAX_TOKENS和SOURCE_CHAT_MAX_TOKENS应根据硬件能力和使用场景调整。
 - 资源与硬件：CPU/内存/GPU容量与模型规模匹配；GPU加速显著降低延迟。
 - 网络与代理：WebSocket升级、超时与缓冲、上传大小限制。
-
-[无需章节来源——本节为通用指导]
 
 ## 故障排除指南
 - 配置验证：检查环境变量、数据库连接、API健康状态、前端配置检测输出。
@@ -335,6 +597,8 @@ RP --> FE
 - 安全问题：密码保护生效、会话清理、端口暴露控制。
 - 数据库：重试策略、并发任务、命名空间/数据库正确性。
 - AI提供商：凭据测试、模型发现与注册、模型名称严格匹配、默认模型配置。
+- **配置常量问题**：检查LARGE_CONTEXT_TOKEN_THRESHOLD设置是否合理；验证DEFAULT_MAX_TOKENS和SOURCE_CHAT_MAX_TOKENS是否符合硬件限制。
+- **模型管理问题**：确认DefaultModels配置正确；检查ModelManager的凭据关联；验证模型类型匹配。
 - 本地语音：Speaches服务可达性、模型下载与加载、Docker网络映射、GPU资源。
 
 **章节来源**
@@ -344,11 +608,12 @@ RP --> FE
 - [docs/5-CONFIGURATION/ollama.md](file://docs/5-CONFIGURATION/ollama.md#L245-L474)
 - [docs/5-CONFIGURATION/local-tts.md](file://docs/5-CONFIGURATION/local-tts.md#L218-L296)
 - [docs/5-CONFIGURATION/local-stt.md](file://docs/5-CONFIGURATION/local-stt.md#L219-L274)
+- [open_notebook/config.py](file://open_notebook/config.py#L19-L26)
+- [open_notebook/ai/models.py](file://open_notebook/ai/models.py#L61-L95)
+- [open_notebook/ai/provision.py](file://open_notebook/ai/provision.py#L38-L48)
 
 ## 结论
-Open Notebook的配置以“凭据系统+环境变量”为核心，结合数据库、安全、AI提供商、本地语音与反向代理实现端到端能力。生产环境建议明确API_URL、启用HTTPS、强化密码与网络边界、合理设置并发与超时，并通过文档化配置与示例编排确保一致性与可维护性。
-
-[无需章节来源——本节为总结]
+Open Notebook的配置以"凭据系统+环境变量+集中化模型管理"为核心，结合数据库、安全、AI提供商、本地语音与反向代理实现端到端能力。新引入的配置常量和AI模型集中化管理架构进一步提升了系统的灵活性和可维护性。生产环境建议明确API_URL、启用HTTPS、强化密码与网络边界、合理设置并发与超时，并通过文档化配置与示例编排确保一致性与可维护性。配置常量的合理设置对于系统性能和用户体验具有重要影响。
 
 ## 附录
 
@@ -361,10 +626,12 @@ Open Notebook的配置以“凭据系统+环境变量”为核心，结合数据
 - 调试：LANGCHAIN_TRACING_V2、LANGCHAIN_ENDPOINT、LANGCHAIN_API_KEY、LANGCHAIN_PROJECT
 - 内容抽取：FIRECRAWL_API_KEY、JINA_API_KEY
 - 网络代理：HTTP_PROXY、HTTPS_PROXY、NO_PROXY
+- **新增配置常量**：LARGE_CONTEXT_TOKEN_THRESHOLD、DEFAULT_MAX_TOKENS、SOURCE_CHAT_MAX_TOKENS
 
 **章节来源**
 - [docs/5-CONFIGURATION/environment-reference.md](file://docs/5-CONFIGURATION/environment-reference.md#L1-L275)
 - [docs/5-CONFIGURATION/advanced.md](file://docs/5-CONFIGURATION/advanced.md#L277-L327)
+- [open_notebook/config.py](file://open_notebook/config.py#L19-L26)
 
 ### 配置文件模板
 - 最小化安装模板（含数据库与加密密钥）
@@ -372,9 +639,11 @@ Open Notebook的配置以“凭据系统+环境变量”为核心，结合数据
 - 自托管反向代理模板（域名与HTTPS）
 - 企业代理模板（代理与超时）
 - 高性能部署模板（并发、TTS批处理、超时）
+- **AI模型配置模板**（含默认模型设置、凭据关联）
 
 **章节来源**
 - [docs/5-CONFIGURATION/environment-reference.md](file://docs/5-CONFIGURATION/environment-reference.md#L135-L183)
+- [open_notebook/ai/models.py](file://open_notebook/ai/models.py#L61-L95)
 
 ### 不同部署场景要点
 - 开发机/本地：最小化配置，使用localhost与默认端口，必要时开启代理。
@@ -382,8 +651,11 @@ Open Notebook的配置以“凭据系统+环境变量”为核心，结合数据
 - 多容器/Compose：服务间网络、依赖顺序、卷挂载、GPU设备映射。
 - 反向代理：单端口代理、HTTPS、超时、CORS、上传大小。
 - 100%本地：Ollama + Speaches + SurrealDB，完全离线与私有化。
+- **AI模型部署**：根据硬件能力选择合适的默认模型；配置大型上下文模型用于长文档处理。
 
 **章节来源**
 - [examples/docker-compose-full-local.yml](file://examples/docker-compose-full-local.yml#L1-L198)
 - [docs/5-CONFIGURATION/reverse-proxy.md](file://docs/5-CONFIGURATION/reverse-proxy.md#L160-L470)
 - [docs/5-CONFIGURATION/ollama.md](file://docs/5-CONFIGURATION/ollama.md#L58-L174)
+- [open_notebook/ai/models.py](file://open_notebook/ai/models.py#L61-L95)
+- [open_notebook/config.py](file://open_notebook/config.py#L19-L26)
