--- a/.qoder/repowiki/zh/content/项目概述/技术栈概览.md
+++ b/.qoder/repowiki/zh/content/项目概述/技术栈概览.md
@@ -12,13 +12,24 @@
 - [frontend/src/lib/config.ts](file://frontend/src/lib/config.ts)
 - [open_notebook/ai/models.py](file://open_notebook/ai/models.py)
 - [open_notebook/database/repository.py](file://open_notebook/database/repository.py)
+- [open_notebook/database/unified_repository.py](file://open_notebook/database/unified_repository.py)
+- [open_notebook/database/surrealdb_adapter.py](file://open_notebook/database/surrealdb_adapter.py)
+- [open_notebook/database/postgresql_adapter.py](file://open_notebook/database/postgresql_adapter.py)
 - [open_notebook/ai/provision.py](file://open_notebook/ai/provision.py)
 - [open_notebook/utils/embedding.py](file://open_notebook/utils/embedding.py)
 - [supervisord.conf](file://supervisord.conf)
 - [open_notebook/database/migrate.py](file://open_notebook/database/migrate.py)
+- [open_notebook/database/async_migrate.py](file://open_notebook/database/async_migrate.py)
 - [frontend/next.config.ts](file://frontend/next.config.ts)
 - [frontend/tailwind.config.ts](file://frontend/tailwind.config.ts)
 </cite>
+
+## 更新摘要
+**变更内容**
+- 数据库架构重大升级：从单一SurrealDB到统一数据访问层支持SurrealDB和PostgreSQL双数据库架构
+- 新增统一仓库模式和适配器设计，实现透明的数据访问抽象
+- 引入领域路由机制，自动将实体类型路由到相应的数据库后端
+- 保持原有技术栈的核心组件不变，增强系统的可扩展性和数据分离能力
 
 ## 目录
 1. [简介](#简介)
@@ -32,13 +43,13 @@
 9. [结论](#结论)
 
 ## 简介
-本项目采用现代全栈技术组合：后端使用 Python/FastAPI 提供高性能 REST API；前端采用 Next.js/React 构建现代化用户界面；数据库层基于 SurrealDB 实现统一的数据模型与查询能力；AI 能力通过 LangChain 生态与多提供商适配器（Esperanto）集成，支持 OpenAI、Anthropic、Ollama 等多种推理与嵌入模型。整体架构强调隐私可控、可扩展与开发效率，并通过容器化与反向代理简化部署。
+本项目采用现代全栈技术组合：后端使用 Python/FastAPI 提供高性能 REST API；前端采用 Next.js/React 构建现代化用户界面；数据库层通过统一数据访问层支持SurrealDB和PostgreSQL双数据库架构，实现业务数据与活体知识系统的分离存储；AI 能力通过 LangChain 生态与多提供商适配器（Esperanto）集成，支持 OpenAI、Anthropic、Ollama 等多种推理与嵌入模型。整体架构强调隐私可控、可扩展与开发效率，并通过容器化与反向代理简化部署。
 
 ## 项目结构
-项目采用前后端分离与微服务化思路：
+项目采用前后端分离与微服务化思路，现已升级为统一数据访问层架构：
 - 后端 API：FastAPI 应用，按功能模块拆分为多个路由子系统，统一在主应用中注册。
 - 前端 UI：Next.js 应用，通过 API 重写代理到后端，支持独立部署与反向代理场景。
-- 数据库：SurrealDB 作为统一数据存储与查询引擎，支持结构化与图谱查询。
+- 数据库层：统一数据访问层（Unified Repository）支持SurrealDB和PostgreSQL双数据库架构，通过适配器模式实现透明的数据访问。
 - AI 模型管理：通过 Esperanto 统一抽象不同提供商的模型接口，结合 LangChain 执行推理与嵌入任务。
 - 容器编排：Docker 多阶段构建，Supervisor 管理 API、Worker 与前端进程，统一暴露端口并支持反向代理。
 
@@ -54,8 +65,15 @@ Routers["路由模块<br/>/api/*"]
 AuthMW["密码认证中间件"]
 CORS_MW["CORS 中间件"]
 end
+subgraph "统一数据访问层"
+UNIFIED["统一仓库<br/>UnifiedRepository"]
+DOMAIN_ROUTER["领域路由<br/>DomainRouter"]
+ADAPTER_SURREAL["SurrealDB 适配器"]
+ADAPTER_PG["PostgreSQL 适配器"]
+end
 subgraph "数据库"
 DB_Surreal["SurrealDB v2<br/>端口 8000"]
+DB_PG["PostgreSQL<br/>端口 5433"]
 end
 subgraph "AI 引擎"
 AI_Models["模型管理<br/>Esperanto/LangChain"]
@@ -72,7 +90,12 @@ FE_Next -. 代理 .-> API_FastAPI
 API_FastAPI --> Routers
 API_FastAPI --> AuthMW
 API_FastAPI --> CORS_MW
-API_FastAPI --> DB_Surreal
+UNIFIED --> DOMAIN_ROUTER
+UNIFIED --> ADAPTER_SURREAL
+UNIFIED --> ADAPTER_PG
+ADAPTER_SURREAL --> DB_Surreal
+ADAPTER_PG --> DB_PG
+API_FastAPI --> UNIFIED
 API_FastAPI --> AI_Models
 AI_Models --> AI_Embed
 AI_Models --> AI_Provision
@@ -86,7 +109,9 @@ Docker --> Supervisor
 - [supervisord.conf](file://supervisord.conf#L1-L41)
 - [api/main.py](file://api/main.py#L1-L190)
 - [frontend/next.config.ts](file://frontend/next.config.ts#L1-L36)
-- [open_notebook/database/repository.py](file://open_notebook/database/repository.py#L1-L195)
+- [open_notebook/database/unified_repository.py](file://open_notebook/database/unified_repository.py#L1-L548)
+- [open_notebook/database/surrealdb_adapter.py](file://open_notebook/database/surrealdb_adapter.py#L1-L281)
+- [open_notebook/database/postgresql_adapter.py](file://open_notebook/database/postgresql_adapter.py#L1-L364)
 - [open_notebook/ai/models.py](file://open_notebook/ai/models.py#L1-L267)
 - [open_notebook/utils/embedding.py](file://open_notebook/utils/embedding.py#L1-L208)
 
@@ -100,8 +125,10 @@ Docker --> Supervisor
 - 后端框架与路由
   - FastAPI 提供异步高性能 API，内置自动 OpenAPI 文档与中间件链。
   - 路由按功能模块划分，统一前缀 /api，便于扩展与维护。
-- 数据访问层
-  - SurrealDB 作为统一数据源，提供结构化与图谱查询能力，支持 RPC 连接与命名空间/数据库隔离。
+- 统一数据访问层
+  - **新增** UnifiedRepository 作为统一接口，支持SurrealDB和PostgreSQL双数据库架构。
+  - DomainRouter 根据实体类型自动路由到相应的数据库后端。
+  - SurrealDBAdapter 和 PostgreSQLAdapter 分别包装现有数据库实现，提供统一的CRUD接口。
 - AI 能力层
   - Esperanto 抽象多提供商模型接口，LangChain 执行推理与工具调用。
   - 嵌入生成支持批量与分块 mean pooling，提升长文本处理效率。
@@ -112,7 +139,9 @@ Docker --> Supervisor
 
 **章节来源**
 - [api/main.py](file://api/main.py#L157-L180)
-- [open_notebook/database/repository.py](file://open_notebook/database/repository.py#L47-L63)
+- [open_notebook/database/unified_repository.py](file://open_notebook/database/unified_repository.py#L323-L548)
+- [open_notebook/database/surrealdb_adapter.py](file://open_notebook/database/surrealdb_adapter.py#L23-L281)
+- [open_notebook/database/postgresql_adapter.py](file://open_notebook/database/postgresql_adapter.py#L17-L364)
 - [open_notebook/ai/models.py](file://open_notebook/ai/models.py#L97-L267)
 - [open_notebook/utils/embedding.py](file://open_notebook/utils/embedding.py#L82-L208)
 - [frontend/src/lib/config.ts](file://frontend/src/lib/config.ts#L1-L149)
@@ -120,21 +149,29 @@ Docker --> Supervisor
 - [supervisord.conf](file://supervisord.conf#L1-L41)
 
 ## 架构总览
-系统采用“前端 Next.js + 后端 FastAPI + SurrealDB + AI 框架”的分层架构，通过 API 重写与运行时配置实现灵活部署与反向代理支持。Supervisor 统一管理三个进程，确保容器内稳定运行。
+系统采用"前端 Next.js + 后端 FastAPI + 统一数据访问层 + AI 框架"的分层架构，通过 API 重写与运行时配置实现灵活部署与反向代理支持。统一数据访问层通过适配器模式实现SurrealDB和PostgreSQL的透明访问，Supervisor 统一管理三个进程，确保容器内稳定运行。
 
 ```mermaid
 sequenceDiagram
 participant U as "浏览器"
 participant FE as "Next.js 前端"
 participant API as "FastAPI 后端"
-participant DB as "SurrealDB"
-participant AI as "AI 模型管理"
+participant UR as "统一仓库"
+participant DR as "领域路由"
+participant SA as "SurrealDB 适配器"
+participant PGA as "PostgreSQL 适配器"
+participant DB1 as "SurrealDB"
+participant DB2 as "PostgreSQL"
 U->>FE : 访问 / (端口 8502)
 FE->>FE : 读取运行时配置 /config
 FE->>API : 通过 /api/* 重写代理请求
-API->>DB : 执行 SurrealQL 查询/更新
-API->>AI : 获取默认/指定模型并执行推理/嵌入
-AI-->>API : 返回结果
+API->>UR : 统一数据访问接口
+UR->>DR : 实体类型路由
+DR->>SA : 核心业务数据 (notebook, source, note)
+DR->>PGA : 活体知识系统数据 (cell, agent, metrics)
+SA->>DB1 : 执行SurrealQL查询/更新
+PGA->>DB2 : 执行SQL查询/更新
+UR-->>API : 标准化查询结果
 API-->>FE : JSON 响应
 FE-->>U : 渲染页面
 ```
@@ -143,8 +180,9 @@ FE-->>U : 渲染页面
 - [frontend/next.config.ts](file://frontend/next.config.ts#L15-L32)
 - [frontend/src/lib/config.ts](file://frontend/src/lib/config.ts#L59-L140)
 - [api/main.py](file://api/main.py#L157-L180)
-- [open_notebook/database/repository.py](file://open_notebook/database/repository.py#L65-L83)
-- [open_notebook/ai/models.py](file://open_notebook/ai/models.py#L101-L176)
+- [open_notebook/database/unified_repository.py](file://open_notebook/database/unified_repository.py#L194-L244)
+- [open_notebook/database/surrealdb_adapter.py](file://open_notebook/database/surrealdb_adapter.py#L61-L118)
+- [open_notebook/database/postgresql_adapter.py](file://open_notebook/database/postgresql_adapter.py#L70-L131)
 
 ## 详细组件分析
 
@@ -167,7 +205,8 @@ Ready --> Request["接收请求"]
 Request --> Auth["密码认证中间件"]
 Auth --> CORS["CORS 中间件"]
 CORS --> Router["路由分发"]
-Router --> DB["数据库操作"]
+Router --> UnifiedRepo["统一数据访问层"]
+UnifiedRepo --> DB["数据库操作"]
 Router --> AI["AI 推理/嵌入"]
 DB --> Resp["返回响应"]
 AI --> Resp
@@ -182,44 +221,120 @@ Resp --> End(["完成"])
 **章节来源**
 - [api/main.py](file://api/main.py#L1-L190)
 
-### 数据库访问（SurrealDB）
-- 连接与命名空间
-  - 通过环境变量获取连接地址与凭据，支持旧格式回退。
-  - 使用命名空间与数据库隔离，避免多实例冲突。
-- 查询封装
-  - 提供通用查询、创建、关联、更新、删除与批量插入方法，统一记录 ID 解析与错误处理。
-- 并发与事务
-  - 对并发冲突进行调试级日志，区分可重试错误与不可重试错误。
+### 统一数据访问层（新增）
+- **统一仓库接口**
+  - UnifiedRepository 抽象了所有数据库操作，提供一致的CRUD接口。
+  - 支持查询、创建、更新、删除、关联查询等标准操作。
+  - 返回标准化的QueryResult，包含数据源信息和查询耗时。
+- **领域路由机制**
+  - DomainRouter 根据实体类型自动选择数据库后端。
+  - 核心业务数据（notebook、source、note等）路由到SurrealDB。
+  - 活体知识系统数据（cell、agent、metrics等）路由到PostgreSQL。
+  - 支持跨域查询的特殊处理机制。
+- **适配器模式实现**
+  - SurrealDBAdapter 包装现有repository.py函数，提供统一接口。
+  - PostgreSQLAdapter 包装LKS的PostgreSQLDatabase类，实现Living System数据访问。
+  - 所有适配器实现BackendAdapter接口，确保一致性。
 
 ```mermaid
 classDiagram
-class Repository {
-+get_database_url() string
-+get_database_password() string
-+repo_query(query, vars) Dict[]
-+repo_create(table, data) Dict
-+repo_relate(source, rel, target, data) Dict[]
-+repo_upsert(table, id, data, add_timestamp) Dict[]
-+repo_update(table, id, data) Dict[]
-+repo_delete(record_id) any
-+repo_insert(table, data, ignore_duplicates) Dict[]
+class UnifiedRepository {
++query(entity_type, filters, limit, offset, order_by) QueryResult
++get_by_id(entity_type, entity_id) QueryResult
++create(entity_type, data) QueryResult
++update(entity_type, entity_id, data) QueryResult
++delete(entity_type, entity_id) QueryResult
++get_related(entity_type, entity_id, relation_type) QueryResult
 }
-class SurrealDB {
-+signin(credentials) void
-+use(namespace, database) void
-+query(sql, vars) any
-+insert(table, data) any
-+delete(record_id) any
-+close() void
+class DomainRouter {
++get_domain(entity_type) DataDomain
++get_backend(entity_type) StorageBackend
++is_cross_domain(entity_types) bool
 }
-Repository --> SurrealDB : "使用"
+class BackendAdapter {
+<<abstract>>
++backend_type StorageBackend
++connect() void
++disconnect() void
++query() List[Dict]
++get_by_id() Dict
++create() Dict
++update() Dict
++delete() bool
+}
+class SurrealDBAdapter {
++backend_type SURREALDB
++connect() void
++disconnect() void
++query() List[Dict]
++get_by_id() Dict
++create() Dict
++update() Dict
++delete() bool
+}
+class PostgreSQLAdapter {
++backend_type POSTGRESQL
++connect() void
++disconnect() void
++query() List[Dict]
++get_by_id() Dict
++create() Dict
++update() Dict
++delete() bool
+}
+UnifiedRepository --> DomainRouter : "使用"
+UnifiedRepository --> BackendAdapter : "委托"
+BackendAdapter <|-- SurrealDBAdapter
+BackendAdapter <|-- PostgreSQLAdapter
 ```
 
 **图表来源**
-- [open_notebook/database/repository.py](file://open_notebook/database/repository.py#L12-L195)
+- [open_notebook/database/unified_repository.py](file://open_notebook/database/unified_repository.py#L71-L188)
+- [open_notebook/database/unified_repository.py](file://open_notebook/database/unified_repository.py#L194-L244)
+- [open_notebook/database/unified_repository.py](file://open_notebook/database/unified_repository.py#L250-L317)
+- [open_notebook/database/surrealdb_adapter.py](file://open_notebook/database/surrealdb_adapter.py#L23-L60)
+- [open_notebook/database/postgresql_adapter.py](file://open_notebook/database/postgresql_adapter.py#L17-L51)
 
 **章节来源**
-- [open_notebook/database/repository.py](file://open_notebook/database/repository.py#L1-L195)
+- [open_notebook/database/unified_repository.py](file://open_notebook/database/unified_repository.py#L1-L548)
+- [open_notebook/database/surrealdb_adapter.py](file://open_notebook/database/surrealdb_adapter.py#L1-L281)
+- [open_notebook/database/postgresql_adapter.py](file://open_notebook/database/postgresql_adapter.py#L1-L364)
+
+### 数据库访问（已升级）
+- **SurrealDB 适配器**
+  - 包装现有 repository.py 函数，提供统一的CRUD接口。
+  - 支持SurrealQL查询构建，自动处理参数绑定和记录ID转换。
+  - 利用SurrealDB原生图查询能力，支持复杂的关系查询。
+- **PostgreSQL 适配器**
+  - 包装LKS的PostgreSQLDatabase类，实现Living System数据访问。
+  - 支持标准SQL查询构建，自动处理参数绑定和结果映射。
+  - 针对活体知识系统特定实体类型提供专门的保存和查询方法。
+- **连接管理**
+  - SurrealDB使用per-operation连接，通过连接测试验证可用性。
+  - PostgreSQL使用连接池管理，支持并发查询和事务处理。
+
+```mermaid
+flowchart TD
+Entity["实体类型"] --> Router["领域路由"]
+Router --> SurrealDB{"核心业务？"}
+SurrealDB --> |是| SurrealAdapter["SurrealDB 适配器"]
+SurrealDB --> |否| PGAdapter["PostgreSQL 适配器"]
+SurrealAdapter --> SurrealConn["SurrealDB 连接"]
+PGAdapter --> PGConn["PostgreSQL 连接"]
+SurrealConn --> SurrealQuery["SurrealQL 查询"]
+PGConn --> SQLQuery["SQL 查询"]
+SurrealQuery --> Result["查询结果"]
+SQLQuery --> Result
+```
+
+**图表来源**
+- [open_notebook/database/unified_repository.py](file://open_notebook/database/unified_repository.py#L224-L244)
+- [open_notebook/database/surrealdb_adapter.py](file://open_notebook/database/surrealdb_adapter.py#L37-L60)
+- [open_notebook/database/postgresql_adapter.py](file://open_notebook/database/postgresql_adapter.py#L37-L51)
+
+**章节来源**
+- [open_notebook/database/surrealdb_adapter.py](file://open_notebook/database/surrealdb_adapter.py#L1-L281)
+- [open_notebook/database/postgresql_adapter.py](file://open_notebook/database/postgresql_adapter.py#L1-L364)
 
 ### AI 模型管理（Esperanto + LangChain）
 - 模型抽象
@@ -347,17 +462,19 @@ PkgJSON --> Editor["Monaco Editor"]
 - 启动与冷启动
   - 多阶段构建减少运行时体积，Supervisor 管理进程，缩短启动时间。
 - 数据库访问
-  - 通过连接池与统一查询封装，减少重复连接开销；对并发冲突进行调试级日志，避免噪声。
+  - 通过统一数据访问层减少重复连接开销；适配器模式支持连接池和并发查询。
+  - 对并发冲突进行调试级日志，避免噪声。
 - AI 推理与嵌入
   - 批量嵌入与分块 mean pooling 降低 API 调用次数；根据内容长度动态选择大上下文模型。
 - 前端代理
   - 通过 Next.js 重写代理隐藏后端端口差异，减少反向代理复杂度，提升用户体验。
 
-[本节为通用性能建议，不直接分析具体文件]
-
 ## 故障排查指南
 - 健康检查与迁移
   - 启动时若数据库迁移失败会立即报错并终止，需检查数据库连接与凭据。
+- 统一数据访问层
+  - **新增** 如果遇到"No adapter available for entity type"错误，检查实体类型是否正确配置在DomainRouter中。
+  - **新增** PostgreSQL连接失败时，检查数据库端口（默认5433）和服务状态。
 - CORS 与上传
   - 若出现上传 413，需在反向代理层调整请求体大小限制；自定义异常处理器已在后端确保 CORS 头存在。
 - 运行时配置
@@ -368,8 +485,9 @@ PkgJSON --> Editor["Monaco Editor"]
 **章节来源**
 - [api/main.py](file://api/main.py#L47-L96)
 - [api/main.py](file://api/main.py#L130-L154)
+- [open_notebook/database/unified_repository.py](file://open_notebook/database/unified_repository.py#L342-L361)
 - [frontend/src/lib/config.ts](file://frontend/src/lib/config.ts#L59-L140)
 - [supervisord.conf](file://supervisord.conf#L7-L41)
 
 ## 结论
-本项目以 FastAPI、Next.js、SurrealDB 和 LangChain 生态为核心，构建了隐私可控、可扩展且易于部署的全栈研究助手平台。通过运行时配置与 API 重写代理，系统在单容器与多容器部署场景下均具备良好灵活性；通过 Esperanto 的多提供商抽象与 LangChain 的工具链，实现了强大的 AI 能力集成。容器化与 Supervisor 的组合进一步提升了生产环境的稳定性与可维护性。
+本项目以 FastAPI、Next.js、统一数据访问层和 LangChain 生态为核心，构建了隐私可控、可扩展且易于部署的全栈研究助手平台。通过引入统一数据访问层，系统实现了SurrealDB和PostgreSQL的透明访问，支持核心业务数据与活体知识系统的分离存储，增强了系统的可扩展性和数据管理能力。通过运行时配置与 API 重写代理，系统在单容器与多容器部署场景下均具备良好灵活性；通过 Esperanto 的多提供商抽象与 LangChain 的工具链，实现了强大的 AI 能力集成。容器化与 Supervisor 的组合进一步提升了生产环境的稳定性与可维护性。
